增加中缀表达式转后缀表达式

--- a/常用代码.md
+++ b/常用代码.md
@@ -2695,6 +2695,48 @@ def isValidSerialization(self, preorder):
     return degree == 0
 ```
 
+## 中缀表达式转后缀表达式
+
+```java
+String infixToPostfix(String infix) {
+    Map<Character, Integer> priority = new HashMap<>();
+    priority.put('(', 1);
+    priority.put(')', -1);
+    priority.put('+', 2);
+    priority.put('-', 2);
+    priority.put('*', 3);
+    priority.put('/', 3);
+    priority.put('^', 3);
+    StringBuilder builder = new StringBuilder();
+    Stack<Character> stack = new Stack<>();
+    for (char c : infix.toCharArray()) {
+        if (priority.containsKey(c)) {
+            if (c == '(') {
+                stack.push(c);
+            } else if (c == ')') {
+                while (!stack.empty() && stack.peek() != '(') {
+                    builder.append(stack.pop());
+                }
+                if (!stack.empty()) {
+                    stack.pop();
+                }
+            } else {
+                while (!stack.empty() && priority.get(stack.peek()) >= priority.get(c)) {
+                    builder.append(stack.pop());
+                }
+                stack.push(c);
+            }
+        } else {
+            builder.append(c);
+        }
+    }
+    while (!stack.empty()) {
+        builder.append(stack.pop());
+    }
+    return builder.toString();
+}
+```
+
 [leetcode_461]: https://leetcode.com/problems/hamming-distance/#/description
 
 [leetcode_136]: https://leetcode.com/problems/single-number/#/description
