--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -862,7 +862,7 @@ public class MyStack {
 
 # 同步问题
 
-## 生产者----消费者模型
+## 生产者——消费者模型
 
 ```java
 public class Main {
@@ -1294,7 +1294,7 @@ def majorityElement(nums):
 
 [Leetcode 504. Base 7][leetcode_504]
 
-```python
+```java
 public String convertToBase7(int num) {
     if (num == 0) {
         return "0";
