--- a/其他/其他.md
+++ b/其他/其他.md
@@ -1,27 +1,38 @@
 # 其他
 
-## XML和JSON的区别
+<!-- TOC -->
 
-### XML
+- [1. XML和JSON的区别](#1-xml和json的区别)
+  - [1.1. XML](#11-xml)
+  - [1.2. JSON](#12-json)
+- [2. 开源协议](#2-开源协议)
+- [3. 方法中什么时候需要进行参数校验，什么时候不需要](#3-方法中什么时候需要进行参数校验什么时候不需要)
+- [4. 版本号命名方式](#4-版本号命名方式)
+
+<!-- /TOC -->
+
+## 1. XML和JSON的区别
+
+### 1.1. XML
 
 - 应用广泛，可扩展性强，被广泛应用各种场合；
 - 读取、解析没有JSON快；
 - 可读性强，可描述复杂结构。
 
-### JSON
+### 1.2. JSON
 
 - 结构简单，都是键值对；
 - 读取、解析速度快，很多语言支持；
 - 传输数据量小，传输速率大大提高；
 - 描述复杂结构能力较弱。
 
-## 开源协议
+## 2. 开源协议
 
 ![Free Software Licenses][free_software_licenses]
 
 [Licenses | Choose a License][choose_a_license]
 
-## 方法中什么时候需要进行参数校验，什么时候不需要
+## 3. 方法中什么时候需要进行参数校验，什么时候不需要
 
 需要进行参数校验的场景：
 
@@ -36,7 +47,7 @@
 - 底层方法（调用频率高，且不太可能出错）。
 - 被声明为private，只会被自己代码调用的方法。
 
-## 版本号命名方式
+## 4. 版本号命名方式
 
 版本格式：主版本号.次版本号.修订号
 
