--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -1,6 +1,20 @@
 # 操作系统
 
-## 进程间通信方式
+<!-- TOC -->
+
+- [1. 进程间通信方式](#1-进程间通信方式)
+- [2. 操作系统的特征](#2-操作系统的特征)
+- [3. 进程的组成](#3-进程的组成)
+  - [3.1. 进程控制块（Process Control Block，PCB）](#31-进程控制块process-control-blockpcb)
+  - [3.2. 程序段](#32-程序段)
+  - [3.3. 数据段](#33-数据段)
+- [4. 线程与进程的比较](#4-线程与进程的比较)
+- [5. 死锁产生的必要条件](#5-死锁产生的必要条件)
+- [6. Linux文件系统](#6-linux文件系统)
+
+<!-- /TOC -->
+
+## 1. 进程间通信方式
 
 - 管道( pipe )：管道是一种半双工的通信方式，数据只能单向流动，而且只能在具有亲缘关系的进程间使用。进程的亲缘关系通常是指父子进程关系。
 - 有名管道 (named pipe) ： 有名管道也是半双工的通信方式，但是它允许无亲缘关系进程间的通信。
@@ -10,27 +24,27 @@
 - 共享内存( shared memory ) ：共享内存就是映射一段能被其他进程所访问的内存，这段共享内存由一个进程创建，但多个进程都可以访问。共享内存是最快的 IPC 方式，它是针对其他进程间通信方式运行效率低而专门设计的。它往往与其他通信机制，如信号两，配合使用，来实现进程间的同步和通信。
 - 套接字( socket ) ： 套解口也是一种进程间通信机制，与其他通信机制不同的是，它可用于不同机器间的进程通信。
 
-## 操作系统的特征
+## 2. 操作系统的特征
 
 - 并发：并发是指两个或多个事件在同一时间间隔内发生。操作系统的并发性是指计算机系统中同时存在多个运行着的程序，因此它应该具有处理和调度多个程序同时执行的能力。
 - 共享：共享是指系统中的资源（硬件资源和信息资源）可以被多个并发执行的程序共同使用，而不是被其中一个独占。资源共享有两种方式：互斥访问和同时访问。
 - 异步：在多道程序环境下，允许多个程序并发执行，但由于资源有限，进程的执行不是一贯到底，而是走走停停，以不可预知的速度向前推进，这就是进程的异步性。
 - 虚拟：虚拟是一种管理技术，把物理上的一个实体变成逻辑上的多个对应物，或把物理上的多个实体变成逻辑上的一个对应物的技术。采用虚拟技术的目的是为用户提供易于使用、方便高效的操作环境。
 
-## 进程的组成
+## 3. 进程的组成
 
-### 进程控制块（Process Control Block，PCB）
+### 3.1. 进程控制块（Process Control Block，PCB）
 
 - 进程描述信息：进程标识符（PID）、用户标识符（UID）。
 - 进程控制和管理信息：进程当前状态、进程优先级、代码运行入口地址、程序的外存地址、进入内存时间、处理器占用时间、信号量使用。
 - 资源分配清单：代码段指针、数据段指针、堆栈段指针、文件描述符、键盘、鼠标。
 - 处理器相关信息：通用寄存器值、地址寄存器值、控制寄存器值、标志寄存器值、状态字
 
-### 程序段
+### 3.2. 程序段
 
-### 数据段
+### 3.3. 数据段
 
-## 线程与进程的比较
+## 4. 线程与进程的比较
 
 - 调度：在传统的操作系统中，拥有资源和独立调度的基本单位都是进程。在引入线程的操作系统中，线程是独立调度的基本单位，进程是资源拥有的基本单位。在同一进程中，线程的切换不会引起进程切换。在不同进程中进行线程切换,如从一个进程内的线程切换到另一个进程中的线程时，会引起进程切换。
 
@@ -44,7 +58,7 @@
 
 - 通信方面：进程间通信(IPC)需要进程同步和互斥手段的辅助，以保证数据的一致性，而线程间可以直接读/写进程数据段（如全局变量）来进行通信。
 
-## 死锁产生的必要条件
+## 5. 死锁产生的必要条件
 
 产生死锁必须同时满足以下四个条件，只要其中任一条件不成立，死锁就不会发生。
 
@@ -53,7 +67,7 @@
 - 请求和保持条件：进程每次申请它所需要的一部分资源，在等待新资源的同时，进程继续占有已分配的资源。
 - 循环等待条件：存在一种进程资源的循环等待链，链中每一个进程已获得的资源同时被链中下一个进程所请求。
 
-## Linux文件系统
+## 6. Linux文件系统
 
 一个典型的Linux分区如下图所示：
 
