--- a/数据库/数据库.md
+++ b/数据库/数据库.md
@@ -1,44 +1,63 @@
 # 数据库
 
-## 范式
+<!-- TOC -->
+
+- [1. 范式](#1-范式)
+  - [1.1. NF](#11-nf)
+  - [1.2. NF](#12-nf)
+  - [1.3. NF](#13-nf)
+  - [1.4. BCNF](#14-bcnf)
+  - [1.5. NF](#15-nf)
+  - [1.6. NF](#16-nf)
+- [2. 什么是事务](#2-什么是事务)
+- [3. ACID](#3-acid)
+- [4. 什么是事务隔离，事务隔离的级别？](#4-什么是事务隔离事务隔离的级别)
+  - [4.1. 可序列化](#41-可序列化)
+  - [4.2. 可重复读](#42-可重复读)
+  - [4.3. 提交读](#43-提交读)
+  - [4.4. 未提交读](#44-未提交读)
+
+<!-- /TOC -->
+
+## 1. 范式
 
 在面向对象的思想指导下，遵循模式建立的表称为模型（Model），具体的记录称为实体（Entity），表字段称为字段，具体的记录的某个字段称为属性（Property）。
 
-### 1NF
+### 1.1. NF
 
 实体的每个属性都是原子属性，不存在多值属性。无重复属性。满足1NF才可以称之为关系型数据库。
 
 > 字段是最小的的单元不可再分
 
-### 2NF
+### 1.2. NF
 
 在不存在多值属性的基础上。要求定义主属性。实体的属性们要完全依赖于主属性。不存在非主属性对主属性的部分依赖。
 
 > 满足1NF，表中的字段必须完全依赖于全部主键而非部分主键（一般我们都会做到）
 
-### 3NF
+### 1.3. NF
 
 在不存在多值属性、不存在实体的属性部分依赖于主属性的基础上。要求任何非主属性不依赖于其他非主属性。这称之为消除传递依赖。
 
 > 满足2NF，非主键外的所有字段必须互不依赖
 
-### BCNF
+### 1.4. BCNF
 
 在不存在多值属性、不存在实体的属性部分依赖于主属性、不存在非主属性依赖于其他非主属性的基础上。主属性内部不能有部分或传递依赖。这将消除对主属性子集的依赖，使主属性保持最简。
 
-### 4NF
+### 1.5. NF
 
 在不存在多值属性、不存在实体的属性部分依赖于主键、不存在非主属性依赖于其他非主属性、主属性内部不能有部分或传递依赖的基础上。消除多值依赖，只允许函数依赖。
 
 > 满足3NF，消除表中的多值依赖
 
-### 5NF
+### 1.6. NF
 
 在不存在多值属性、不存在实体的属性部分依赖于主属性、不存在非主属性依赖于其他非主属性、主属性内部不能有部分或传递依赖、不存在多值依赖的基础上。消除连接依赖，并且必须保证数据完整性。
 
 [关系型数据库的几种设计范式（1NF 2NF 3NF BCNF 4NF 5NF） - 简书][nf]
 
-## 什么是事务
+## 2. 什么是事务
 
 数据库事务（简称：事务）是数据库管理系统执行过程中的一个逻辑单位，由一个有限的数据库操作序列构成。
 
@@ -47,7 +66,7 @@
 - 为数据库操作序列提供了一个从失败中恢复到正常状态的方法，同时提供了数据库即使在异常状态下仍能保持一致性的方法。
 - 当多个应用程序在并发访问数据库时，可以在这些应用程序之间提供一个隔离方法，以防止彼此的操作互相干扰。
 
-## ACID
+## 3. ACID
 
 ACID，是指数据库管理系统（DBMS）在写入或更新资料的过程中，为保证事务（transaction）是正确可靠的，所必须具备的四个特性：
 
@@ -56,7 +75,7 @@ ACID，是指数据库管理系统（DBMS）在写入或更新资料的过程中
 - 隔离性（isolation，又称独立性）：数据库允许多个并发事务同时对其数据进行读写和修改的能力，隔离性可以防止多个事务并发执行时由于交叉执行而导致数据的不一致。事务隔离分为不同级别，包括读未提交（read uncommitted）、读提交（read committed）、可重复读（repeatable read）和串行化（serializable）。
 - 持久性（durability）：事务处理结束后，对数据的修改就是永久的，即便系统故障也不会丢失。
 
-## 什么是事务隔离，事务隔离的级别？
+## 4. 什么是事务隔离，事务隔离的级别？
 
 事务隔离（Transaction Isolation）定义了数据库系统中一个操作的结果在何时以何种方式对其他并发操作可见。
 
@@ -68,7 +87,7 @@ ACID，是指数据库管理系统（DBMS）在写入或更新资料的过程中
 
 ANSI/ISO SQL定义的标准隔离级别如下：
 
-### 可序列化
+### 4.1. 可序列化
 
 最高的隔离级别。
 
@@ -76,15 +95,15 @@ ANSI/ISO SQL定义的标准隔离级别如下：
 
 当采用不基于锁的并发控制时不用获取锁。但当系统探测到几个并发事务有“写冲突”的时候，只有其中一个是允许提交的。
 
-### 可重复读
+### 4.2. 可重复读
 
 在可重复读（REPEATABLE READS）隔离级别中，基于锁机制并发控制的DBMS需要对选定对象的读锁（read locks）和写锁（write locks）一直保持到事务结束，但不要求“范围锁”，因此可能会发生“幻影读”。
 
-### 提交读
+### 4.3. 提交读
 
 在提交读（READ COMMITTED）级别中，基于锁机制并发控制的DBMS需要对选定对象的写锁一直保持到事务结束，但是读锁在SELECT操作完成后马上释放（因此“不可重复读”现象可能会发生）。和前一种隔离级别一样，也不要求“范围锁”。
 
-### 未提交读
+### 4.4. 未提交读
 
 未提交读（READ UNCOMMITTED）是最低的隔离级别。允许“脏读”（dirty reads），事务可以看到其他事务“尚未提交”的修改。
 
