--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -1,6 +1,28 @@
 # 计算机网络
 
-## 计算机网络分层体系结构
+<!-- TOC -->
+
+- [1. 计算机网络分层体系结构](#1-计算机网络分层体系结构)
+- [2. 数据进入协议栈时的封装](#2-数据进入协议栈时的封装)
+- [3. TCP传输过程](#3-tcp传输过程)
+- [4. HTTP报文](#4-http报文)
+  - [4.1. HTTP请求报文](#41-http请求报文)
+    - [4.1.1. 方法（Method）](#411-方法method)
+    - [4.1.2. 请求URL（Request-URL）](#412-请求urlrequest-url)
+    - [4.1.3. 版本（Version）](#413-版本version)
+    - [4.1.4. 首部（Header Field）](#414-首部header-field)
+    - [4.1.5. 实体主体（Entity Body）](#415-实体主体entity-body)
+  - [4.2. HTTP响应报文](#42-http响应报文)
+    - [4.2.1. 版本（Version）](#421-版本version)
+    - [4.2.2. 状态码（Status Code）和短语（Phrase）](#422-状态码status-code和短语phrase)
+    - [4.2.3. 首部（Header Field）](#423-首部header-field)
+    - [4.2.4. 实体主体（Entity Body）](#424-实体主体entity-body)
+- [5. MTU最小64B最大1518B的由来](#5-mtu最小64b最大1518b的由来)
+- [6. IPv4分组格式](#6-ipv4分组格式)
+
+<!-- /TOC -->
+
+## 1. 计算机网络分层体系结构
 
 ![Computer Network Architecture][computer_network_architecture]
 
@@ -14,11 +36,11 @@
 | 数据链路层 |   传输有地址的帧以及错误检测功能   |     SLIP、CSLIP、PPP、ARP、RARP、MTU    |
 |  物理层  |   以二进制数据形式在物理媒体上传输  |           ISO2110、IEEE802          |
 
-## 数据进入协议栈时的封装
+## 2. 数据进入协议栈时的封装
 
 ![Data Packet in Protocol Stack][data_packet_in_protocol_stack]
 
-## TCP传输过程
+## 3. TCP传输过程
 
 ![Tcp Communication][tcp_communication]
 
@@ -26,13 +48,13 @@
 
 [TCP 的那些事儿（下） | | 酷 壳 - CoolShell][tcp part 2 coolshell]
 
-## HTTP报文
+## 4. HTTP报文
 
-### HTTP请求报文
+### 4.1. HTTP请求报文
 
 ![Http Request Message][http_request_message]
 
-#### 方法（Method）
+#### 4.1.1. 方法（Method）
 
 客户端希望服务器对资源执行的动作。是一个单独的词，如GET、HEAD或POST。
 
@@ -46,11 +68,11 @@
 |  TRACE  |      请求服务器回送收到的请求信息，主要用于测试或诊断     |    否   |
 | OPTIONS |          请求服务器告知其支持的各种功能          |    否   |
 
-#### 请求URL（Request-URL）
+#### 4.1.2. 请求URL（Request-URL）
 
 命名了所请求资源，或者URL路径组件的完整URL。
 
-#### 版本（Version）
+#### 4.1.3. 版本（Version）
 
 报文所使用的HTTP版本，格式为
 
@@ -60,13 +82,13 @@ HTTP/<major>.<minor>
 
 其中主要版本号（major）和次要版本号（minor）都是整数。
 
-#### 首部（Header Field）
+#### 4.1.4. 首部（Header Field）
 
 首部和方法配合工作，共同决定了客户端和服务器能做什么事情。
 
-##### 通用首部
+##### 4.1.4.1. 通用首部
 
-###### 通用信息首部
+###### 4.1.4.1.1. 通用信息首部
 
 |         首部        |                                     描述                                     |
 | :---------------: | :------------------------------------------------------------------------: |
@@ -78,18 +100,18 @@ HTTP/<major>.<minor>
 |       Update      |                           给出了发送端可能想要"升级"使用的新版本或协议                          |
 |        Via        |                             显示了报文经过的中间节点（代理、网关）                            |
 
-###### 通用缓存首部
+###### 4.1.4.1.2. 通用缓存首部
 
 |       首部      |            描述           |
 | :-----------: | :---------------------: |
 | Cache-Control |       用于随报文传送缓存的指示      |
 |     Pragma    | 另一种随报文传送指示的方式，但并不专用于缓存。 |
 
-##### 请求首部
+##### 4.1.4.2. 请求首部
 
 用于说明是谁或什么在发送请求、请求源自何处，或者客户端的喜好及能力。
 
-###### 请求信息首部
+###### 4.1.4.2.1. 请求信息首部
 
 |     首部     |            描述           |
 | :--------: | :---------------------: |
@@ -104,7 +126,7 @@ HTTP/<major>.<minor>
 |  UA-Pixels |      提供了客户端显示器的像素信息     |
 | User-Agent |    将发起请求的应用程序名称告知服务器    |
 
-###### Accept首部
+###### 4.1.4.2.2. Accept首部
 
 为客户端提供了一种将其洗好和能力告知服务器的方式。这样服务器就可以根据这些信息，对要发送的内容做出更明智的决定。
 
@@ -116,7 +138,7 @@ HTTP/<major>.<minor>
 | Accept-Language |   告诉服务器能够发送哪些语言   |
 |        TE       | 告诉服务器可以使用哪些扩展传输编码 |
 
-###### 条件请求首部
+###### 4.1.4.2.3. 条件请求首部
 
 有时客户端希望为请求加上某些限制。比如，如果客户端已经有了一份文档副本，就希望只在服务器上的文档与客户端拥有的副本有区别时，才请求服务器传输文档。通过条件请求首部添加限制就可以达到目的。
 
@@ -130,7 +152,7 @@ HTTP/<major>.<minor>
 | If-Unmodified-Since |  除非在某个日期之后资源没有被修改过，否则就限制这个请求 |
 |        Range        |    如果服务器支持范围请求，就请求资源的指定范围    |
 
-###### 安全请求首部
+###### 4.1.4.2.4. 安全请求首部
 
 对请求进行质询／响应认证。
 
@@ -140,7 +162,7 @@ HTTP/<major>.<minor>
 |     Cookie    | 客户端用它向服务器传送一个令牌——它并不是真正的安全首部，但确实隐含了安全功能 |
 |    Cookie2    |           用来说明请求端支持的cookies版本           |
 
-###### 代理请求首部
+###### 4.1.4.2.5. 代理请求首部
 
 |          首部         |                       描述                      |
 | :-----------------: | :-------------------------------------------: |
@@ -148,7 +170,7 @@ HTTP/<major>.<minor>
 | Proxy-Authorization |    与Authorization首部相同，但这个首部实在与代理进行认证的时候后使用的   |
 |   Proxy-Connection  |       与Connection首部相同，但这个首部是在与代理建立连接时使用的      |
 
-##### 响应首部
+##### 4.1.4.3. 响应首部
 
 响应首部为客户端提供了一些额外的信息, 并在将来发起更好的请求。
 
@@ -161,7 +183,7 @@ HTTP/<major>.<minor>
 |    Title    | 对HTML文档来说，就是HTML文档的源端给出的标题 |
 |   Warning   |      比原因短语中更详细一些的警告报文      |
 
-###### 协商首部
+###### 4.1.4.3.1. 协商首部
 
 如果资源有多种表示方法——比如，如果服务器上有某文档的法语和德语译稿，HTTP/1.1可以为服务器和客户端提供对资源进行协商的能力。
 
@@ -170,7 +192,7 @@ HTTP/<major>.<minor>
 | Accept-Range |                           对此资源来说，服务器可接受的范围类型                           |
 |     Vary     | 服务器查看的其他首部的列表，可能会使响应发生变化；也就是说，这是一个首部列表，服务器会根据这些首部的内容挑选初最合适的资源版本发送给客户端。 |
 
-###### 安全响应首部
+###### 4.1.4.3.2. 安全响应首部
 
 |         首部         |                       描述                      |
 | :----------------: | :-------------------------------------------: |
@@ -179,7 +201,7 @@ HTTP/<major>.<minor>
 |     Set-Cookie2    |                 与Set-Cookie类似                 |
 |  WWW-Authenticate  |                来自服务器的对客户端的质询列表。               |
 
-##### 实体首部
+##### 4.1.4.4. 实体首部
 
 实体首部指的是用于应对实体主体部分的首部。比如，可以用实体首部来说明实体主体部分的数据类型。
 
@@ -188,7 +210,7 @@ HTTP/<major>.<minor>
 |   Allow  |               列出了可以对此实体执行的请求方法              |
 | Location | 告知客户端实体实际上位于何处，用于将接收端定向到资源的（可能是新的）位置（URL）上去 |
 
-###### 内容首部
+###### 4.1.4.4.1. 内容首部
 
 内容首部提供了与实体内容相关的特定信息，说明了其类型，尺寸以及处理它所需的其他有用信息。
 
@@ -203,7 +225,7 @@ HTTP/<major>.<minor>
 |   Content-Range  |   在整个资源中此实体表示的字节范围   |
 |   Content-Type   |       这个主体的对象类型      |
 
-###### 实体缓存首部
+###### 4.1.4.4.2. 实体缓存首部
 
 通用的缓存首部说明了如何或什么时候进行缓存。实体的缓存首部提供了与被缓存实体有关的信息。
 
@@ -213,21 +235,21 @@ HTTP/<major>.<minor>
 |    Expires    | 实体不再有效，要从原始的源端再次获取此实体的日期和时间 |
 | Last-Modified |      这个实体最后一次被修改的日期和时间      |
 
-#### 实体主体（Entity Body）
+#### 4.1.5. 实体主体（Entity Body）
 
 实体的主体是HTTP报文的负荷，就是HTTP要传输的内容。
 
-### HTTP响应报文
+### 4.2. HTTP响应报文
 
 ![Http Response Message][http_response_message]
 
-#### 版本（Version）
+#### 4.2.1. 版本（Version）
 
 如上所述
 
-#### 状态码（Status Code）和短语（Phrase）
+#### 4.2.2. 状态码（Status Code）和短语（Phrase）
 
-##### 状态码分类
+##### 4.2.2.1. 状态码分类
 
 |   整体范围  |  已定义范围  |   分类  |
 | :-----: | :-----: | :---: |
@@ -237,7 +259,7 @@ HTTP/<major>.<minor>
 | 400～499 | 400～415 | 客户端错误 |
 | 500～599 | 500～505 | 服务器错误 |
 
-##### 常见状态码：
+##### 4.2.2.2. 常见状态码：
 
 | 状态码 |           短语          |                         含义                        |
 | :-: | :-------------------: | :-----------------------------------------------: |
@@ -251,15 +273,15 @@ HTTP/<major>.<minor>
 | 500 | Internal Server Error |          服务器遇到了一个未曾预料的状况，导致了它无法完成对请求的处理。          |
 | 503 |  Service Unavailable  |            由于临时的服务器维护或者过载，服务器当前无法处理请求。            |
 
-#### 首部（Header Field）
+#### 4.2.3. 首部（Header Field）
 
 如上所述
 
-#### 实体主体（Entity Body）
+#### 4.2.4. 实体主体（Entity Body）
 
 如上所述
 
-## MTU最小64B最大1518B的由来
+## 5. MTU最小64B最大1518B的由来
 
 在CSMA/CD下，每个节点在自己发送数据之后的一小段时间内，存在着遭遇冲突的可能性，只有经过争用期（以太网端到端的往返时延）这段时间还没有检测到冲突，才能确定这次发送不会发生冲突。而争用期为57.6us（以太网支持最大4个中继器，最长2500米），在10Mbps网络中，57.6us内能够传输576bit，即72B；去掉8B的前导符和帧开始符，以太网帧的最小长度是64B。
 
@@ -267,7 +289,7 @@ HTTP/<major>.<minor>
 
 [车小胖谈网络：Ethernet Frame - 知乎专栏][ethernet frame]
 
-## IPv4分组格式
+## 6. IPv4分组格式
 
 ![IPv4 Packet Structure][ipv4_packet_structure]
 
