--- a/设计模式/设计模式.md
+++ b/设计模式/设计模式.md
@@ -1,6 +1,15 @@
 # 设计模式
 
-## 设计模式的六大原则
+<!-- TOC -->
+
+- [1. 设计模式的六大原则](#1-设计模式的六大原则)
+- [2. 什么是高内聚、低耦合？](#2-什么是高内聚低耦合)
+  - [2.1. 内聚性](#21-内聚性)
+  - [2.2. 耦合性](#22-耦合性)
+
+<!-- /TOC -->
+
+## 1. 设计模式的六大原则
 
 - 单一职责原则（Single Responsibility Principle，SRP）：不要存在多于一个导致类变更的原因。通俗的说，即一个类只负责一项职责。
 - 里氏替换原则（Liskov Substitution Principle，LSP）：如果对每一个类型为 T1的对象 o1，都有类型为 T2 的对象o2，使得以 T1定义的所有程序 P 在所有的对象 o1 都代换成 o2 时，程序 P 的行为没有发生变化，那么类型 T2 是类型 T1 的子类型。所有引用基类的地方必须能透明地使用其子类的对象。
@@ -9,9 +18,9 @@
 - 迪米特法则（Law of Demeter，LoD）：一个对象应该对其他对象保持最少的了解。
 - 开放封闭原则（Open Close Principle，OCP）：一个软件实体如类、模块和函数应该对扩展开放，对修改关闭。
 
-## 什么是高内聚、低耦合？
+## 2. 什么是高内聚、低耦合？
 
-### 内聚性
+### 2.1. 内聚性
 
 内聚性又称块内联系。指模块的功能强度的度量，即一个模块内部各个元素彼此结合的紧密程度的度量。若一个模块内各元素（语名之间、程序段之间）联系的越紧密，则它的内聚性就越高。
 
@@ -24,7 +33,7 @@
 - 顺序内聚：指一个模块中各个处理元素都密切相关于同一功能且必须顺序执行，前一功能元素输出就是下一功能元素的输入。
 - 功能内聚：这是最强的内聚，指模块内所有元素共同完成一个功能，缺一不可。与其他模块的耦合是最弱的。
 
-### 耦合性
+### 2.2. 耦合性
 
 耦合性也称块间联系。指软件系统结构中各模块间相互联系紧密程度的一种度量。模块之间联系越紧密，其耦合性就越强，模块的独立性则越差。模块间耦合高低取决于模块间接口的复杂性、调用的方式及传递的信息。
 
