--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -1,6 +1,131 @@
 # 设计模式
 
-## 单例模式
+<!-- TOC -->
+
+- [1. 单例模式](#1-单例模式)
+- [2. 快速排序`partition`过程](#2-快速排序partition过程)
+  - [2.1. 方法一](#21-方法一)
+  - [2.2. 方法二](#22-方法二)
+  - [2.3. 方法三](#23-方法三)
+- [3. 快速排序](#3-快速排序)
+  - [3.1. 递归](#31-递归)
+  - [3.2. 非递归](#32-非递归)
+- [4. 插入排序](#4-插入排序)
+- [5. 冒泡排序](#5-冒泡排序)
+- [6. 选择排序](#6-选择排序)
+- [7. 归并排序](#7-归并排序)
+  - [7.1. 递归](#71-递归)
+  - [7.2. 非递归](#72-非递归)
+- [8. 堆排序](#8-堆排序)
+- [9. 反转链表（头插法）](#9-反转链表头插法)
+- [10. 单链表去重](#10-单链表去重)
+- [11. 合并两个链表](#11-合并两个链表)
+- [12. 检查回文链表](#12-检查回文链表)
+- [13. 链表等概率随机抽取元素](#13-链表等概率随机抽取元素)
+- [14. 链表按奇数序号和偶数序号重排](#14-链表按奇数序号和偶数序号重排)
+- [15. 二叉树前序遍历](#15-二叉树前序遍历)
+  - [15.1. 递归](#151-递归)
+  - [15.2. 非递归](#152-非递归)
+- [16. 二叉树中序遍历](#16-二叉树中序遍历)
+  - [16.1. 递归](#161-递归)
+  - [16.2. 非递归](#162-非递归)
+- [17. 二叉树后序遍历](#17-二叉树后序遍历)
+  - [17.1. 递归](#171-递归)
+  - [17.2. 非递归](#172-非递归)
+- [18. 二叉树层次遍历](#18-二叉树层次遍历)
+- [19. Dijkstra算法](#19-dijkstra算法)
+  - [19.1. 朴素](#191-朴素)
+  - [19.2. 堆优化](#192-堆优化)
+- [20. Floyd-Warshall算法](#20-floyd-warshall算法)
+- [21. 拓扑排序](#21-拓扑排序)
+  - [21.1. DFS](#211-dfs)
+  - [21.2. BFS](#212-bfs)
+- [22. 二分搜索](#22-二分搜索)
+- [23. 并查集](#23-并查集)
+- [24. Trie树](#24-trie树)
+- [25. N皇后问题](#25-n皇后问题)
+- [26. 栈模拟队列](#26-栈模拟队列)
+- [27. 队列模拟栈](#27-队列模拟栈)
+- [28. 生产者——消费者模型](#28-生产者消费者模型)
+- [29. LRU](#29-lru)
+- [30. LFU](#30-lfu)
+- [31. 自顶向下](#31-自顶向下)
+- [32. 自底向上](#32-自底向上)
+- [33. 计算数字二进制表示的1的个数](#33-计算数字二进制表示的1的个数)
+- [34. 数组中除一个数仅出现一次外，其他数均出现两次，找出这个数](#34-数组中除一个数仅出现一次外其他数均出现两次找出这个数)
+- [35. 长为n的数组中所有元素在\[1, n\]之间，元素最多出现两次，找出\[1, n\]中没出现的元素](#35-长为n的数组中所有元素在1-n之间元素最多出现两次找出1-n中没出现的元素)
+- [36. 不用`+`和`-`计算两个数的和](#36-不用和-计算两个数的和)
+- [37. 反转二叉树](#37-反转二叉树)
+- [38. 把数组中所有0移动到尾部，数组元素保持相对顺序不变](#38-把数组中所有0移动到尾部数组元素保持相对顺序不变)
+- [39. 定义一次move是将长为n的数组中n-1个数均加1，最少多少个move可以使得数组中所有元素相等](#39-定义一次move是将长为n的数组中n-1个数均加1最少多少个move可以使得数组中所有元素相等)
+- [40. 找出长为n的数组中出现次数大于⌊ n/2 ⌋的元素](#40-找出长为n的数组中出现次数大于⌊-n2-⌋的元素)
+- [41. 十进制转换为7进制](#41-十进制转换为7进制)
+- [42. 指定长度二进制数，指定1的个数的所有可能情况](#42-指定长度二进制数指定1的个数的所有可能情况)
+- [43. 有序数组转二叉搜索树](#43-有序数组转二叉搜索树)
+- [44. 最大子数列问题](#44-最大子数列问题)
+  - [44.1. 最小值为0](#441-最小值为0)
+  - [44.2. 最小值为负数](#442-最小值为负数)
+- [45. 判断一个数是否为2的幂次](#45-判断一个数是否为2的幂次)
+- [46. 判断一个数是否为4的幂次](#46-判断一个数是否为4的幂次)
+- [47. 最近公共祖先问题](#47-最近公共祖先问题)
+  - [47.1. 二叉树的最近公共祖先](#471-二叉树的最近公共祖先)
+  - [47.2. 二叉搜索树的最近公共祖先](#472-二叉搜索树的最近公共祖先)
+- [48. 挑选数组中不连续的元素，使其和最大](#48-挑选数组中不连续的元素使其和最大)
+- [49. 镜像二叉树](#49-镜像二叉树)
+- [50. 判断二叉树是否平衡](#50-判断二叉树是否平衡)
+- [51. 二分法求平方根](#51-二分法求平方根)
+- [52. n!求末尾0的个数](#52-n求末尾0的个数)
+- [53. 有序数组去重](#53-有序数组去重)
+- [54. 链表判断环](#54-链表判断环)
+- [55. 判断是否为回文数](#55-判断是否为回文数)
+- [56. 是否存在二叉树根到叶子节点路径和为指定值](#56-是否存在二叉树根到叶子节点路径和为指定值)
+- [57. 找出字符串中所有变位词](#57-找出字符串中所有变位词)
+- [58. 判断两个字符串是否为同构字符串](#58-判断两个字符串是否为同构字符串)
+- [59. 判断一个数是否为其全部约数的和](#59-判断一个数是否为其全部约数的和)
+- [60. 打乱数组元素](#60-打乱数组元素)
+- [61. 生成不重复随机序列](#61-生成不重复随机序列)
+- [62. 使用随机生成0到5的函数，实现随机生成0到7的函数](#62-使用随机生成0到5的函数实现随机生成0到7的函数)
+- [63. 计算数组A、B、C、D中有多少种(i, j, k, l)使得A\[i\] + B\[j\] + C\[k\] + D\[l\] = 0](#63-计算数组abcd中有多少种i-j-k-l使得ai--bj--ck--dl--0)
+- [64. 计算给出的多个时间中，最小的时间差](#64-计算给出的多个时间中最小的时间差)
+- [65. 计算\[0, 10^n)中各位数字不同的数的个数](#65-计算\0-10^n中各位数字不同的数的个数)
+- [66. 数组中仅有两个数仅出现一次，其余的数均出现两次，找出这两个数](#66-数组中仅有两个数仅出现一次其余的数均出现两次找出这两个数)
+- [67. 找出递增数列中第n位的数字](#67-找出递增数列中第n位的数字)
+- [68. 计算小于n的质数的个数](#68-计算小于n的质数的个数)
+- [69. 由部分（可重复）给定数组元素相加得到指定值的情况数](#69-由部分可重复给定数组元素相加得到指定值的情况数)
+- [70. 在有序矩阵中寻找第k大的数](#70-在有序矩阵中寻找第k大的数)
+- [71. 求n对括号的所有排列情况](#71-求n对括号的所有排列情况)
+- [72. 给定字符串数组，求最大不相交的两个字符串的长度积](#72-给定字符串数组求最大不相交的两个字符串的长度积)
+- [73. 在由\[1, n\]组成的长为n + 1的数组中，寻找重复的那个数](#73-在由1-n组成的长为n--1的数组中寻找重复的那个数)
+- [74. 求给定数组的所有排列情况](#74-求给定数组的所有排列情况)
+- [75. 最长回文子序列](#75-最长回文子序列)
+- [76. 将\[1, n\]的数按字典排序](#76-将1-n的数按字典排序)
+- [77. 二叉搜索树迭代器](#77-二叉搜索树迭代器)
+- [78. 由\[1, n\]组成的二叉搜索树的个数](#78-由1-n组成的二叉搜索树的个数)
+- [79. 格雷码](#79-格雷码)
+- [80. 从m x n棋盘左上角走到右下角的路径总数](#80-从m-x-n棋盘左上角走到右下角的路径总数)
+- [81. 求循环移位的有序数组中的到最小值](#81-求循环移位的有序数组中的到最小值)
+- [82. 求集合的所有子集](#82-求集合的所有子集)
+- [83. 判断数组arr中是否存在arr\[i\] &lt; arr\[j\] &lt; arr\[k\]](#83-判断数组arr中是否存在arri-lt-arrj-lt-arrk)
+- [84. 查找数组中第k大的数](#84-查找数组中第k大的数)
+- [85. 链表删除倒数第n个结点](#85-链表删除倒数第n个结点)
+- [86. 判断数组是否可以拼接为正方形](#86-判断数组是否可以拼接为正方形)
+- [87. 快速`pow()`](#87-快速pow)
+- [88. 判断数组是否可以分为相等的两部分](#88-判断数组是否可以分为相等的两部分)
+- [89. 在矩阵中查找指定值](#89-在矩阵中查找指定值)
+- [90. 将矩阵顺时针旋转90度](#90-将矩阵顺时针旋转90度)
+- [91. 最长递增子序列](#91-最长递增子序列)
+- [92. 求二维矩阵由左上角到右下角的最小和](#92-求二维矩阵由左上角到右下角的最小和)
+- [93. 将由0、1、2组成的数组排序](#93-将由012组成的数组排序)
+- [94. 求第n位仅由指定因数组成的数字](#94-求第n位仅由指定因数组成的数字)
+- [95. 数组中查找极大值](#95-数组中查找极大值)
+- [96. 判断n能否由平方数的和组成](#96-判断n能否由平方数的和组成)
+- [97. 删除二叉搜索树中的结点](#97-删除二叉搜索树中的结点)
+- [98. 检查字符串是否是合法的二叉树前序遍历结果](#98-检查字符串是否是合法的二叉树前序遍历结果)
+- [99. 中缀表达式转后缀表达式](#99-中缀表达式转后缀表达式)
+
+<!-- /TOC -->
+
+## 1. 单例模式
 
 ```java
 public class Singleton {
@@ -23,9 +148,9 @@ public class Singleton {
 
 # 排序
 
-## 快速排序`partition`过程
+## 2. 快速排序`partition`过程
 
-### 方法一
+### 2.1. 方法一
 
 ```python
 def partition(array, low, high):
@@ -41,7 +166,7 @@ def partition(array, low, high):
     return low
 ```
 
-### 方法二
+### 2.2. 方法二
 
 ```python
 def partition2(array, low, high):
@@ -58,7 +183,7 @@ def partition2(array, low, high):
     return current
 ```
 
-### 方法三
+### 2.3. 方法三
 
 ```python
 def partition3(array, low, high):
@@ -79,9 +204,9 @@ def partition3(array, low, high):
     return high
 ```
 
-## 快速排序
+## 3. 快速排序
 
-### 递归
+### 3.1. 递归
 
 ```python
 def quick_sort(array, low, high):
@@ -92,7 +217,7 @@ def quick_sort(array, low, high):
     quick_sort(array, mid + 1, high)
 ```
 
-### 非递归
+### 3.2. 非递归
 
 ```python
 def quick_sort(array, low, high):
@@ -111,7 +236,7 @@ def quick_sort(array, low, high):
         stack.append(high)
 ```
 
-## 插入排序
+## 4. 插入排序
 
 ```python
 def insertion_sort(array):
@@ -124,7 +249,7 @@ def insertion_sort(array):
         array[j + 1] = temp
 ```
 
-## 冒泡排序
+## 5. 冒泡排序
 
 ```python
 def bubble_sort(array):
@@ -141,7 +266,7 @@ def bubble_sort(array):
             break
 ```
 
-## 选择排序
+## 6. 选择排序
 
 ```python
 def selection_sort(array):
@@ -156,9 +281,9 @@ def selection_sort(array):
         swap(array, i, min_index)
 ```
 
-## 归并排序
+## 7. 归并排序
 
-### 递归
+### 7.1. 递归
 
 ```python
 def merge(array, temp_array, low, mid, high):
@@ -196,7 +321,7 @@ def merge_sort(array, temp_array, low, high):
     merge(array, temp_array, low, mid, high)
 ```
 
-### 非递归
+### 7.2. 非递归
 
 ```python
 def merge_sort(array):
@@ -233,7 +358,7 @@ def merge_sort(array):
         block *= 2
 ```
 
-## 堆排序
+## 8. 堆排序
 
 ```python
 def heap_sort(array):
@@ -267,7 +392,7 @@ def heap_sort(array):
 
 # 链表
 
-## 反转链表（头插法）
+## 9. 反转链表（头插法）
 
 ```python
 def reverse_list(head):
@@ -282,7 +407,7 @@ def reverse_list(head):
     return new_head
 ```
 
-## 单链表去重
+## 10. 单链表去重
 
 ```java
 public ListNode deleteDuplicates(ListNode head) {
@@ -298,7 +423,7 @@ public ListNode deleteDuplicates(ListNode head) {
 }
 ```
 
-## 合并两个链表
+## 11. 合并两个链表
 
 ```java
 public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
@@ -328,7 +453,7 @@ public ListNode mergeTwoLists(ListNode l1, ListNode l2) {
 }
 ```
 
-## 检查回文链表
+## 12. 检查回文链表
 
 ```python
 def isPalindrome(head):
@@ -358,7 +483,7 @@ def isPalindrome(head):
     return True
 ```
 
-## 链表等概率随机抽取元素
+## 13. 链表等概率随机抽取元素
 
 ```java
 public int getRandom(ListNode head) {
@@ -377,7 +502,7 @@ public int getRandom(ListNode head) {
 }
 ```
 
-## 链表按奇数序号和偶数序号重排
+## 14. 链表按奇数序号和偶数序号重排
 
 ```python
 def oddEvenList(head):
@@ -401,9 +526,9 @@ def oddEvenList(head):
 
 # 二叉树遍历
 
-## 二叉树前序遍历
+## 15. 二叉树前序遍历
 
-### 递归
+### 15.1. 递归
 
 ```python
 def pre_order(root):
@@ -413,7 +538,7 @@ def pre_order(root):
         pre_order(root.right)
 ```
 
-### 非递归
+### 15.2. 非递归
 
 ```python
 def pre_order(root):
@@ -428,9 +553,9 @@ def pre_order(root):
             root = node.right
 ```
 
-## 二叉树中序遍历
+## 16. 二叉树中序遍历
 
-### 递归
+### 16.1. 递归
 
 ```python
 def in_order(root):
@@ -440,7 +565,7 @@ def in_order(root):
         in_order(root.right)
 ```
 
-### 非递归
+### 16.2. 非递归
 
 ```python
 def in_order(root):
@@ -455,9 +580,9 @@ def in_order(root):
             root = node.right
 ```
 
-## 二叉树后序遍历
+## 17. 二叉树后序遍历
 
-### 递归
+### 17.1. 递归
 
 ```python
 def post_order(root):
@@ -467,7 +592,7 @@ def post_order(root):
         print(root.val)
 ```
 
-### 非递归
+### 17.2. 非递归
 
 ```python
 def post_order(root):
@@ -486,7 +611,7 @@ def post_order(root):
     return result
 ```
 
-## 二叉树层次遍历
+## 18. 二叉树层次遍历
 
 ```python
 def level_order(root):
@@ -507,9 +632,9 @@ def level_order(root):
 
 # 图
 
-## Dijkstra算法
+## 19. Dijkstra算法
 
-### 朴素
+### 19.1. 朴素
 
 ```python
 def dijkstra(start, end, graph, n):
@@ -540,7 +665,7 @@ def dijkstra(start, end, graph, n):
                 previous[v] = u
 ```
 
-### 堆优化
+### 19.2. 堆优化
 
 ```python
 def dijkstra(start, end, graph, n):
@@ -571,7 +696,7 @@ def dijkstra(start, end, graph, n):
                 previous[v] = u
 ```
 
-## Floyd-Warshall算法
+## 20. Floyd-Warshall算法
 
 ```python
 def floyd_warshall(graph, n):
@@ -593,9 +718,9 @@ def floyd_warshall(graph, n):
     return dist, path
 ```
 
-## 拓扑排序
+## 21. 拓扑排序
 
-### DFS
+### 21.1. DFS
 
 ```python
 def topological_sort(graph, n):
@@ -624,7 +749,7 @@ def dfs(graph, index, visiting, visited, order):
     return True
 ```
 
-### BFS
+### 21.2. BFS
 
 ```python
 def topological_sort(graph, n):
@@ -651,7 +776,7 @@ def topological_sort(graph, n):
 
 # 查找
 
-## 二分搜索
+## 22. 二分搜索
 
 ```python
 def binary_search(array, key):
@@ -668,7 +793,7 @@ def binary_search(array, key):
     return -1
 ```
 
-## 并查集
+## 23. 并查集
 
 ```python
 class UnionFind:
@@ -696,7 +821,7 @@ class UnionFind:
         self.count -= 1
 ```
 
-## Trie树
+## 24. Trie树
 
 ```java
 public class Trie {
@@ -750,7 +875,7 @@ public class Trie {
 
 # 回溯
 
-## N皇后问题
+## 25. N皇后问题
 
 ```python
 def n_queens(n):
@@ -789,7 +914,7 @@ def is_valid(board, i, j):
 
 # 栈与队列
 
-## 栈模拟队列
+## 26. 栈模拟队列
 
 ```java
 public class MyQueue {
@@ -829,7 +954,7 @@ public class MyQueue {
 }
 ```
 
-## 队列模拟栈
+## 27. 队列模拟栈
 
 ```java
 public class MyStack {
@@ -862,7 +987,7 @@ public class MyStack {
 
 # 同步问题
 
-## 生产者——消费者模型
+## 28. 生产者——消费者模型
 
 ```java
 public class Main {
@@ -957,7 +1082,7 @@ public class Main {
 
 # 缓存策略
 
-## LRU
+## 29. LRU
 
 ```python
 class LRUCache:
@@ -1023,7 +1148,7 @@ class LRUCache:
         node.next.prev = node
 ```
 
-## LFU
+## 30. LFU
 
 ```python
 class LFUCache:
@@ -1124,7 +1249,7 @@ class LFUCache:
 
 # 斐波拉契数列
 
-## 自顶向下
+## 31. 自顶向下
 
 ```python
 def fibonacci(n):
@@ -1133,7 +1258,7 @@ def fibonacci(n):
     return fibonacci(n - 1) + fibonacci(n - 2)
 ```
 
-## 自底向上
+## 32. 自底向上
 
 ```python
 def fibonacci(n):
@@ -1150,7 +1275,7 @@ def fibonacci(n):
 
 # 经典题目
 
-## 计算数字二进制表示的1的个数
+## 33. 计算数字二进制表示的1的个数
 
 [Leetcode 461. Hamming Distance][leetcode_461]
 
@@ -1163,7 +1288,7 @@ def count_1s(num):
     return count
 ```
 
-## 数组中除一个数仅出现一次外，其他数均出现两次，找出这个数
+## 34. 数组中除一个数仅出现一次外，其他数均出现两次，找出这个数
 
 [Leetcode 136. Single Number][leetcode_136]
 
@@ -1175,7 +1300,7 @@ def single_number(nums):
     return result
 ```
 
-## 长为n的数组中所有元素在[1, n]之间，元素最多出现两次，找出[1, n]中没出现的元素
+## 35. 长为n的数组中所有元素在[1, n]之间，元素最多出现两次，找出[1, n]中没出现的元素
 
 [Leetcode 448. Find All Numbers Disappeared in an Array][leetcode_448]
 
@@ -1197,7 +1322,7 @@ def find_disappeared_numbers(nums):
     return result
 ```
 
-## 不用`+`和`-`计算两个数的和
+## 36. 不用`+`和`-`计算两个数的和
 
 [Leetcode 371. Sum of Two Integers][leetcode_371]
 
@@ -1215,7 +1340,7 @@ public int getSum(int a, int b) {
 }
 ```
 
-## 反转二叉树
+## 37. 反转二叉树
 
 [Leetcode 226. Invert Binary Tree][leetcode_226]
 
@@ -1235,7 +1360,7 @@ def invertTree(root):
     return root
 ```
 
-## 把数组中所有0移动到尾部，数组元素保持相对顺序不变
+## 38. 把数组中所有0移动到尾部，数组元素保持相对顺序不变
 
 [Leetcode 283. Move Zeroes][leetcode_283]
 
@@ -1255,7 +1380,7 @@ public void moveZeroes(int[] nums) {
 }
 ```
 
-## 定义一次move是将长为n的数组中n-1个数均加1，最少多少个move可以使得数组中所有元素相等
+## 39. 定义一次move是将长为n的数组中n-1个数均加1，最少多少个move可以使得数组中所有元素相等
 
 [Leetcode 453. Minimum Moves to Equal Array Elements][leetcode_453]
 
@@ -1268,7 +1393,7 @@ def minMoves(nums):
     return sum(nums) - min(nums) * len(nums)
 ```
 
-## 找出长为n的数组中出现次数大于⌊ n/2 ⌋的元素
+## 40. 找出长为n的数组中出现次数大于⌊ n/2 ⌋的元素
 
 [Leetcode 169. Majority Element][leetcode_169]
 
@@ -1290,7 +1415,7 @@ def majorityElement(nums):
     return majority
 ```
 
-## 十进制转换为7进制
+## 41. 十进制转换为7进制
 
 [Leetcode 504. Base 7][leetcode_504]
 
@@ -1313,7 +1438,7 @@ public String convertToBase7(int num) {
 }
 ```
 
-## 指定长度二进制数，指定1的个数的所有可能情况
+## 42. 指定长度二进制数，指定1的个数的所有可能情况
 
 [Leetcode 401. Binary Watch][leetcode_401]
 
@@ -1333,7 +1458,7 @@ def get_combination(length, num_ones):
     return result
 ```
 
-## 有序数组转二叉搜索树
+## 43. 有序数组转二叉搜索树
 
 [Leetcode 108. Convert Sorted Array to Binary Search Tree][leetcode_108]
 
@@ -1357,11 +1482,11 @@ public TreeNode sortedArrayToBST(int[] nums) {
 }
 ```
 
-## 最大子数列问题
+## 44. 最大子数列问题
 
 [Leetcode 121. Best Time to Buy and Sell Stock][leetcode_121]
 
-### 最小值为0
+### 44.1. 最小值为0
 
 ```python
 def max_subarray(nums):
@@ -1373,7 +1498,7 @@ def max_subarray(nums):
     return max_so_far
 ```
 
-### 最小值为负数
+### 44.2. 最小值为负数
 
 ```python
 def max_subarray(nums):
@@ -1385,7 +1510,7 @@ def max_subarray(nums):
     return max_so_far
 ```
 
-## 判断一个数是否为2的幂次
+## 45. 判断一个数是否为2的幂次
 
 [Leetcode 231. Power of Two][leetcode_231]
 
@@ -1398,7 +1523,7 @@ def isPowerOfTwo(n):
     return n > 0 and 0x80000000 % n == 0
 ```
 
-## 判断一个数是否为4的幂次
+## 46. 判断一个数是否为4的幂次
 
 [Leetcode 342. Power of Four][leetcode_342]
 
@@ -1411,13 +1536,13 @@ def isPowerOfFour(num):
     return num > 0 and num & (num - 1) == 0 and num & 0x55555555 == num
 ```
 
-## 最近公共祖先问题
+## 47. 最近公共祖先问题
 
-### 二叉树的最近公共祖先
+### 47.1. 二叉树的最近公共祖先
 
 [Leetcode ][leetcode_]
 
-### 二叉搜索树的最近公共祖先
+### 47.2. 二叉搜索树的最近公共祖先
 
 [Leetcode 231. Power of Two][leetcode_231]
 
@@ -1440,7 +1565,7 @@ public TreeNode lowestCommonAncestor(TreeNode root, TreeNode p, TreeNode q) {
 }
 ```
 
-## 挑选数组中不连续的元素，使其和最大
+## 48. 挑选数组中不连续的元素，使其和最大
 
 [Leetcode 198. House Robber][leetcode_198]
 
@@ -1459,7 +1584,7 @@ public int rob(int[] nums) {
 }
 ```
 
-## 镜像二叉树
+## 49. 镜像二叉树
 
 [Leetcode 101. Symmetric Tree][leetcode_101]
 
@@ -1482,7 +1607,7 @@ def isSymmetric(root):
     return symmetric(root.left, root.right)
 ```
 
-## 判断二叉树是否平衡
+## 50. 判断二叉树是否平衡
 
 [Leetcode 110. Balanced Binary Tree][leetcode_110]
 
@@ -1505,7 +1630,7 @@ def isBalanced(root):
     return balanced(root) != -1
 ```
 
-## 二分法求平方根
+## 51. 二分法求平方根
 
 [Leetcode 367. Valid Perfect Square][leetcode_367]
 
@@ -1528,7 +1653,7 @@ public int mySqrt(int x) {
 }
 ```
 
-## n!求末尾0的个数
+## 52. n!求末尾0的个数
 
 [Leetcode 172. Factorial Trailing Zeroes][leetcode_172]
 
@@ -1544,7 +1669,7 @@ public int trailingZeroes(int n) {
 }
 ```
 
-## 有序数组去重
+## 53. 有序数组去重
 
 [Leetcode 26. Remove Duplicates from Sorted Array][leetcode_26]
 
@@ -1571,7 +1696,7 @@ def removeDuplicates(nums):
     return i if len(nums) == 0 else i + 1
 ```
 
-## 链表判断环
+## 54. 链表判断环
 
 [Leetcode 141. Linked List Cycle][leetcode_141]
 
@@ -1593,7 +1718,7 @@ def hasCycle(head):
     return False
 ```
 
-## 判断是否为回文数
+## 55. 判断是否为回文数
 
 [Leetcode 9. Palindrome Number][leetcode_9]
 
@@ -1614,7 +1739,7 @@ public boolean isPalindrome(int x) {
 }
 ```
 
-## 是否存在二叉树根到叶子节点路径和为指定值
+## 56. 是否存在二叉树根到叶子节点路径和为指定值
 
 [Leetcode 112. Path Sum][leetcode_112]
 
@@ -1633,7 +1758,7 @@ def hasPathSum(root, sum):
     return hasPathSum(root.left, sum - root.val) or hasPathSum(root.right, sum - root.val)
 ```
 
-## 找出字符串中所有变位词
+## 57. 找出字符串中所有变位词
 
 [Leetcode 438. Find All Anagrams in a String][leetcode_438]
 
@@ -1667,7 +1792,7 @@ public List<Integer> findAnagrams(String s, String p) {
 }
 ```
 
-## 判断两个字符串是否为同构字符串
+## 58. 判断两个字符串是否为同构字符串
 
 [Leetcode 205. Isomorphic Strings][leetcode_205]
 
@@ -1696,7 +1821,7 @@ public boolean isIsomorphic(String s, String t) {
 }
 ```
 
-## 判断一个数是否为其全部约数的和
+## 59. 判断一个数是否为其全部约数的和
 
 [Leetcode 507. Perfect Number][leetcode_507]
 
@@ -1719,7 +1844,7 @@ def checkPerfectNumber(num):
     return result == num
 ```
 
-## 打乱数组元素
+## 60. 打乱数组元素
 
 [Leetcode 384. Shuffle an Array][leetcode_384]
 
@@ -1737,7 +1862,7 @@ public void shuffle(int[] nums) {
 }
 ```
 
-## 生成不重复随机序列
+## 61. 生成不重复随机序列
 
 ```java
 Random random = new Random();
@@ -1759,7 +1884,7 @@ public int[] randomSequence(int n) {
 }
 ```
 
-## 使用随机生成0到5的函数，实现随机生成0到7的函数
+## 62. 使用随机生成0到5的函数，实现随机生成0到7的函数
 
 ```java
 Random random = new Random();
@@ -1779,7 +1904,7 @@ int random7(){
 }
 ```
 
-## 计算数组A、B、C、D中有多少种(i, j, k, l)使得A[i] + B[j] + C[k] + D[l] = 0
+## 63. 计算数组A、B、C、D中有多少种(i, j, k, l)使得A[i] + B[j] + C[k] + D[l] = 0
 
 [Leetcode 454. 4Sum II][leetcode_454]
 
@@ -1808,7 +1933,7 @@ def fourSumCount(A, B, C, D):
     return result
 ```
 
-## 计算给出的多个时间中，最小的时间差
+## 64. 计算给出的多个时间中，最小的时间差
 
 [Leetcode 539. Minimum Time Difference][leetcode_539]
 
@@ -1839,7 +1964,7 @@ public int findMinDifference(List<String> timePoints) {
 }
 ```
 
-## 计算\[0, 10^n)中各位数字不同的数的个数
+## 65. 计算\[0, 10^n)中各位数字不同的数的个数
 
 [Leetcode 357. Count Numbers with Unique Digits][leetcode_357]
 
@@ -1861,7 +1986,7 @@ def countNumbersWithUniqueDigits(n):
     return map[n]
 ```
 
-## 数组中仅有两个数仅出现一次，其余的数均出现两次，找出这两个数
+## 66. 数组中仅有两个数仅出现一次，其余的数均出现两次，找出这两个数
 
 [Leetcode 260. Single Number III][leetcode_260]
 
@@ -1885,7 +2010,7 @@ def singleNumber(nums):
     return [first, second]
 ```
 
-## 找出递增数列中第n位的数字
+## 67. 找出递增数列中第n位的数字
 
 [Leetcode 400. Nth Digit][leetcode_400]
 
@@ -1908,7 +2033,7 @@ def findNthDigit(n):
     return int(str(number)[n % digits])
 ```
 
-## 计算小于n的质数的个数
+## 68. 计算小于n的质数的个数
 
 [Leetcode 204. Count Primes][leetcode_204]
 
@@ -1930,7 +2055,7 @@ def countPrimes(n):
     return sum(primes)
 ```
 
-## 由部分（可重复）给定数组元素相加得到指定值的情况数
+## 69. 由部分（可重复）给定数组元素相加得到指定值的情况数
 
 [Leetcode 377. Combination Sum IV][leetcode_377]
 
@@ -1949,7 +2074,7 @@ public int combinationSum4(int[] nums, int target) {
 }
 ```
 
-## 在有序矩阵中寻找第k大的数
+## 70. 在有序矩阵中寻找第k大的数
 
 [Leetcode 378. Kth Smallest Element in a Sorted Matrix][leetcode_378]
 
@@ -1991,7 +2116,7 @@ public int kthSmallest(int[][] matrix, int k) {
 }
 ```
 
-## 求n对括号的所有排列情况
+## 71. 求n对括号的所有排列情况
 
 [Leetcode 22. Generate Parentheses][leetcode_22]
 
@@ -2014,7 +2139,7 @@ def generateParenthesis(n):
     return result
 ```
 
-## 给定字符串数组，求最大不相交的两个字符串的长度积
+## 72. 给定字符串数组，求最大不相交的两个字符串的长度积
 
 [Leetcode 318. Maximum Product of Word Lengths][leetcode_318]
 
@@ -2040,7 +2165,7 @@ public int maxProduct(String[] words) {
 }
 ```
 
-## 在由[1, n]组成的长为n + 1的数组中，寻找重复的那个数
+## 73. 在由[1, n]组成的长为n + 1的数组中，寻找重复的那个数
 
 [Leetcode 287. Find the Duplicate Number][leetcode_287]
 
@@ -2066,7 +2191,7 @@ public int findDuplicate(int[] nums) {
 }
 ```
 
-## 求给定数组的所有排列情况
+## 74. 求给定数组的所有排列情况
 
 [Leetcode 46. Permutations][leetcode_46]
 
@@ -2089,7 +2214,7 @@ public List<List<Integer>> permute(int[] nums) {
 }
 ```
 
-## 最长回文子序列
+## 75. 最长回文子序列
 
 [Leetcode 516. Longest Palindromic Subsequence][leetcode_516]
 
@@ -2110,7 +2235,7 @@ public int longestPalindromeSubseq(String s) {
 }
 ```
 
-## 将[1, n]的数按字典排序
+## 76. 将[1, n]的数按字典排序
 
 [Leetcode 386. Lexicographical Numbers][leetcode_386]
 
@@ -2137,7 +2262,7 @@ def lexicalOrder(n):
     return result
 ```
 
-## 二叉搜索树迭代器
+## 77. 二叉搜索树迭代器
 
 [Leetcode 173. Binary Search Tree Iterator][leetcode_173]
 
@@ -2171,7 +2296,7 @@ class BSTIterator(object):
         return result
 ```
 
-## 由[1, n]组成的二叉搜索树的个数
+## 78. 由[1, n]组成的二叉搜索树的个数
 
 [Leetcode 96. Unique Binary Search Trees][leetcode_96]
 
@@ -2188,7 +2313,7 @@ public int numTrees(int n) {
 }
 ```
 
-## 格雷码
+## 79. 格雷码
 
 [Leetcode 89. Gray Code][leetcode_89]
 
@@ -2201,7 +2326,7 @@ def grayCode(n):
     return [i ^ (i >> 1) for i in range(1 << n)]
 ```
 
-## 从m x n棋盘左上角走到右下角的路径总数
+## 80. 从m x n棋盘左上角走到右下角的路径总数
 
 [Leetcode 62. Unique Paths][leetcode_62]
 
@@ -2223,7 +2348,7 @@ public int uniquePaths(int m, int n) {
 }
 ```
 
-## 求循环移位的有序数组中的到最小值
+## 81. 求循环移位的有序数组中的到最小值
 
 [Leetcode 153. Find Minimum in Rotated Sorted Array][leetcode_153]
 
@@ -2246,7 +2371,7 @@ public int findMin(int[] nums) {
 }
 ```
 
-## 求集合的所有子集
+## 82. 求集合的所有子集
 
 [Leetcode 78. Subsets][leetcode_78]
 
@@ -2266,7 +2391,7 @@ def subsets(nums):
     return result
 ```
 
-## 判断数组arr中是否存在arr[i] &lt; arr[j] &lt; arr[k]
+## 83. 判断数组arr中是否存在arr[i] &lt; arr[j] &lt; arr[k]
 
 [Leetcode 334. Increasing Triplet Subsequence][leetcode_334]
 
@@ -2287,7 +2412,7 @@ public boolean increasingTriplet(int[] nums) {
 }
 ```
 
-## 查找数组中第k大的数
+## 84. 查找数组中第k大的数
 
 [Leetcode 215. Kth Largest Element in an Array][leetcode_215]
 
@@ -2317,7 +2442,7 @@ def findKthLargest(nums, k):
     return kth_largest(nums, 0, len(nums) - 1, len(nums) - k)
 ```
 
-## 链表删除倒数第n个结点
+## 85. 链表删除倒数第n个结点
 
 [Leetcode 19. Remove Nth Node From End of List][leetcode_19]
 
@@ -2344,7 +2469,7 @@ def removeNthFromEnd(head, n):
     return head
 ```
 
-## 判断数组是否可以拼接为正方形
+## 86. 判断数组是否可以拼接为正方形
 
 [Leetcode 473. Matchsticks to Square][leetcode_473]
 
@@ -2391,7 +2516,7 @@ public boolean makesquare(int[] nums) {
 }
 ```
 
-## 快速`pow()`
+## 87. 快速`pow()`
 
 [Leetcode 372. Super Pow][leetcode_372]
 
@@ -2417,7 +2542,7 @@ public int superPow(int a, int[] b) {
     return result;
 ```
 
-## 判断数组是否可以分为相等的两部分
+## 88. 判断数组是否可以分为相等的两部分
 
 [Leetcode 416. Partition Equal Subset Sum][leetcode_416]
 
@@ -2445,7 +2570,7 @@ public boolean canPartition(int[] nums) {
 }
 ```
 
-## 在矩阵中查找指定值
+## 89. 在矩阵中查找指定值
 
 [Leetcode 240. Search a 2D Matrix II][leetcode_240]
 
@@ -2471,7 +2596,7 @@ def searchMatrix(matrix, target):
     return False
 ```
 
-## 将矩阵顺时针旋转90度
+## 90. 将矩阵顺时针旋转90度
 
 [Leetcode 48. Rotate Image][leetcode_48]
 
@@ -2490,7 +2615,7 @@ def rotate(matrix):
             matrix[i][j], matrix[j][i] = matrix[j][i], matrix[i][j]
 ```
 
-## 最长递增子序列
+## 91. 最长递增子序列
 
 [Leetcode 300. Longest Increasing Subsequence][leetcode_300]
 
@@ -2511,7 +2636,7 @@ def lengthOfLIS(nums):
     return max(dp)
 ```
 
-## 求二维矩阵由左上角到右下角的最小和
+## 92. 求二维矩阵由左上角到右下角的最小和
 
 [Leetcode 64. Minimum Path Sum][leetcode_64]
 
@@ -2536,7 +2661,7 @@ public int minPathSum(int[][] grid) {
 }
 ```
 
-## 将由0、1、2组成的数组排序
+## 93. 将由0、1、2组成的数组排序
 
 [Leetcode 75. Sort Colors][leetcode_75]
 
@@ -2570,7 +2695,7 @@ def sortColors(nums):
             current += 1
 ```
 
-## 求第n位仅由指定因数组成的数字
+## 94. 求第n位仅由指定因数组成的数字
 
 [Leetcode 313. Super Ugly Number][leetcode_313]
 
@@ -2598,7 +2723,7 @@ public int nthSuperUglyNumber(int n, int[] primes) {
 }
 ```
 
-## 数组中查找极大值
+## 95. 数组中查找极大值
 
 [Leetcode 162. Find Peak Elementr][leetcode_162]
 
@@ -2624,7 +2749,7 @@ public int findPeakElement(int[] nums) {
 }
 ```
 
-## 判断n能否由平方数的和组成
+## 96. 判断n能否由平方数的和组成
 
 [Leetcode 279. Perfect Squares][leetcode_279]
 
@@ -2644,7 +2769,7 @@ def numSquares(self, n):
     return dp[n]
 ```
 
-## 删除二叉搜索树中的结点
+## 97. 删除二叉搜索树中的结点
 
 [Leetcode 450. Delete Node in a BST][leetcode_450]
 
@@ -2675,7 +2800,7 @@ def deleteNode(root, key):
     return root
 ```
 
-## 检查字符串是否是合法的二叉树前序遍历结果
+## 98. 检查字符串是否是合法的二叉树前序遍历结果
 
 [Leetcode 331. Verify Preorder Serialization of a Binary Tree][leetcode_331]
 
@@ -2695,7 +2820,7 @@ def isValidSerialization(self, preorder):
     return degree == 0
 ```
 
-## 中缀表达式转后缀表达式
+## 99. 中缀表达式转后缀表达式
 
 ```java
 String infixToPostfix(String infix) {
