--- a/数据结构/数据结构.md
+++ b/数据结构/数据结构.md
@@ -1,6 +1,18 @@
 # 数据结构
 
-## 各种排序算法的性质
+<!-- TOC -->
+
+- [1. 各种排序算法的性质](#1-各种排序算法的性质)
+- [2. 二叉搜索树、AVL树和红黑树的复杂度](#2-二叉搜索树avl树和红黑树的复杂度)
+- [3. 红黑树的性质](#3-红黑树的性质)
+- [4. 图的基本术语](#4-图的基本术语)
+- [5. B树的性质](#5-b树的性质)
+- [6. B+树的性质](#6-b树的性质)
+- [7. B树和B+树的区别](#7-b树和b树的区别)
+
+<!-- /TOC -->
+
+## 1. 各种排序算法的性质
 
 |  算法种类  |     最好    |     平均    |     最坏    |   空间复杂度  | 是否稳定 |
 | :----: | :-------: | :-------: | :-------: | :------: | :--: |
@@ -12,7 +24,7 @@
 | 二路归并排序 |  O(nlogn) |  O(nlogn) |  O(nlogn) |   O(n)   |   是  |
 |  基数排序  | O(d(n+r)) | O(d(n+r)) | O(d(n+r)) |   O(r)   |   是  |
 
-## 二叉搜索树、AVL树和红黑树的复杂度
+## 2. 二叉搜索树、AVL树和红黑树的复杂度
 
 |  树种类  |  空间  |  空间  |    查找   |    查找   |    插入   |    插入   |    删除   |    删除   |
 | :---: | :--: | :--: | :-----: | :-----: | :-----: | :-----: | :-----: | :-----: |
@@ -21,7 +33,7 @@
 |  AVL树 | O(n) | O(n) | O(logn) | O(logn) | O(logn) | O(logn) | O(logn) | O(logn) |
 |  红黑树  | O(n) | O(n) | O(logn) | O(logn) | O(logn) | O(logn) | O(logn) | O(logn) |
 
-## 红黑树的性质
+## 3. 红黑树的性质
 
 红黑树在满足二叉搜索树的要求外，还需满足如下要求：
 
@@ -31,7 +43,7 @@
 - 每个红色节点必须有两个黑色的子节点。（从每个叶子到根的所有路径上不能有两个连续的红色节点。）
 - 从任一节点到其每个叶子的所有简单路径都包含相同数目的黑色节点。
 
-## 图的基本术语
+## 4. 图的基本术语
 
 - 简单图：一个图G如果不存在重复边，也不存在顶点到自身的边，则称图G为简单图。
 - 无向完全图：在无向图中，如果任意两个顶点之间都存在边，则称该图为无向完全图。含有n个顶点的无向完全图有n(n-1)/2条边。
@@ -43,7 +55,7 @@
 - 强连通分量：有向图中的极大强连通字图称为有向图的强连通分量。
 - 生成树：连通图的生成树是包含图中全部顶点的一个极小连通字图。
 
-## B树的性质
+## 5. B树的性质
 
 B树是一种多路平衡查找树，B树中所有结点的孩子结点数的最大值称为B树的阶，通常用m表示。一颗m阶B树，或为空树，或为满足下列特性的m叉树：
 
@@ -53,7 +65,7 @@ B树是一种多路平衡查找树，B树中所有结点的孩子结点数的最
 - 所有的非终端结点中有以下数据：[n, P0, K1, P1, K2, P2, ..., Kn, Pn]。其中，Ki（i = 1, 2, ..., n）为结点的关键字，且有K1 &lt; K2 &lt; ... &lt; Kn；Pi（i = 0, 1, ..., n）为只想子树根结点的指针，且指针Pi-1所指子树中所有结点的关键字均小于Ki，Pn所指子树中所有结点的关键字均大于Kn，n（⌈m/2⌉ - 1 &lt;= n &lt;= m -1）为结点中关键字的个数。
 - 所有的叶结点都出现在同一层次上，并且不带信息（可以看做是外部结点，实际上这些结点不存在，指向这些结点的指针为空）。
 
-## B+树的性质
+## 6. B+树的性质
 
 B+树是B树的一种变形树，一颗m阶B+树应满足下列条件：
 
@@ -63,7 +75,7 @@ B+树是B树的一种变形树，一颗m阶B+树应满足下列条件：
 - 所有叶结点包含全部关键字及其只想相应记录的指针，而且叶结点中将关键字按大小顺序排列，并且相邻叶结点顺序链接起来，所有叶结点在同一层。
 - 所有分支结点（可以看成是索引的索引）中仅包含其子树（即下一级的索引块）中关键字的最大值及指向其子树的指针。
 
-## B树和B+树的区别
+## 7. B树和B+树的区别
 
 - 在B+树中，具有n个关键字的结点只含有n颗子树，即每个关键字对应一颗子树；而在B树中，具有n个关键字的结点含有n + 1颗子树。
 - 在B+树中，每个非根结点关键字个数n的范围是⌈m/2⌉ - 1 &lt;= n &lt;= m - 1（根结点：1 &lt;= n &lt;= m - 1）。
