增加301和302的区别、长连接和短连接、session和cookie、ARP协议

--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -6,19 +6,25 @@
 - [2. 数据进入协议栈时的封装](#2-数据进入协议栈时的封装)
 - [3. TCP传输过程](#3-tcp传输过程)
 - [4. HTTP报文](#4-http报文)
-  - [4.1. HTTP请求报文](#41-http请求报文)
-    - [4.1.1. 方法（Method）](#411-方法method)
-    - [4.1.2. 请求URL（Request-URL）](#412-请求urlrequest-url)
-    - [4.1.3. 版本（Version）](#413-版本version)
-    - [4.1.4. 首部（Header Field）](#414-首部header-field)
-    - [4.1.5. 实体主体（Entity Body）](#415-实体主体entity-body)
-  - [4.2. HTTP响应报文](#42-http响应报文)
-    - [4.2.1. 版本（Version）](#421-版本version)
-    - [4.2.2. 状态码（Status Code）和短语（Phrase）](#422-状态码status-code和短语phrase)
-    - [4.2.3. 首部（Header Field）](#423-首部header-field)
-    - [4.2.4. 实体主体（Entity Body）](#424-实体主体entity-body)
+    - [4.1. HTTP请求报文](#41-http请求报文)
+        - [4.1.1. 方法（Method）](#411-方法method)
+        - [4.1.2. 请求URL（Request-URL）](#412-请求urlrequest-url)
+        - [4.1.3. 版本（Version）](#413-版本version)
+        - [4.1.4. 首部（Header Field）](#414-首部header-field)
+        - [4.1.5. 实体主体（Entity Body）](#415-实体主体entity-body)
+    - [4.2. HTTP响应报文](#42-http响应报文)
+        - [4.2.1. 版本（Version）](#421-版本version)
+        - [4.2.2. 状态码（Status Code）和短语（Phrase）](#422-状态码status-code和短语phrase)
+        - [4.2.3. 首部（Header Field）](#423-首部header-field)
+        - [4.2.4. 实体主体（Entity Body）](#424-实体主体entity-body)
 - [5. MTU最小64B最大1518B的由来](#5-mtu最小64b最大1518b的由来)
 - [6. IPv4分组格式](#6-ipv4分组格式)
+- [7. HTTP响应码301和302的区别？](#7-http响应码301和302的区别)
+- [8. 什么是HTTP的长连接和短连接？](#8-什么是http的长连接和短连接)
+- [9. 什么是TCP的长连接和短连接？](#9-什么是tcp的长连接和短连接)
+- [10. session和cookie有什么区别](#10-session和cookie有什么区别)
+- [11. 分布式session如何同步](#11-分布式session如何同步)
+- [12. ARP协议](#12-arp协议)
 
 <!-- /TOC -->
 
@@ -292,6 +298,50 @@ HTTP/<major>.<minor>
 ## 6. IPv4分组格式
 
 ![IPv4 Packet Structure][ipv4_packet_structure]
+
+## 7. HTTP响应码301和302的区别？
+
+301：永久重定向。是当用户或搜索引擎向网站服务器发出浏览请求时，服务器返回的HTTP数据流中头信息(header)中的状态码的一种，表示本网页永久性转移到另一个地址。
+
+302：临时重定向。搜索引擎会抓取新的内容而保留旧的网址。因为服务器返回302代码，搜索引擎认为新的网址只是暂时的。
+
+## 8. 什么是HTTP的长连接和短连接？
+
+在HTTP/1.0中，默认使用的是短连接。也就是说，浏览器和服务器每进行一次HTTP操作，就建立一次连接，但任务结束就中断连接。
+
+但从 HTTP/1.1起，默认使用长连接，用以保持连接特性。使用长连接的HTTP协议，会在响应头中包含有`Connection:keep-alive`。在使用长连接的情况下，当一个网页打开完成后，客户端和服务器之间用于传输HTTP数据的TCP连接不会关闭，如果客户端再次访问这个服务器上的网页，会继续使用这一条已经建立的连接。
+
+HTTP协议的长连接和短连接，实质上是TCP协议的长连接和短连接。
+
+## 9. 什么是TCP的长连接和短连接？
+
+TCP短连接：client向server发起连接请求，server接到请求，然后双方建立连接。client向server发送消息，server回应client，然后一次读写就完成了，这时候双方任何一个都可以发起close操作，不过一般都是client先发起close操作。
+
+TCP长连接：client向server发起连接，server接受client连接，双方建立连接。Client与server完成一次读写之后，它们之间的连接并不会主动关闭，后续的读写操作会继续使用这个连接。
+
+长连接可以省去较多的TCP建立和关闭的操作，减少浪费，节约时间；但对server端压力较大。短连接对于服务器来说管理较为简单，存在的连接都是有用的连接，不需要额外的控制手段。但如果客户请求频繁，将在TCP的建立和关闭操作上浪费时间和带宽。
+
+长连接多用于操作频繁，点对点的通讯，而且连接数不能太多情况。而像Web网站的http服务一般都用短链接。
+
+## 10. session和cookie有什么区别
+
+- session在服务器端，cookie在客户端（浏览器）；
+- session的运行依赖session id，而session id是保存在cookie中的；
+- cookie目的可以跟踪会话，也可以保存用户喜好或者保存用户名密码；
+- session用来跟踪会话。
+
+## 11. 分布式session如何同步
+
+- 进程间通信传递session数据；
+- cookie加密存储session；
+- 采用统一session接入点
+
+## 12. ARP协议
+
+ARP协议为网络层协议，其工作在数据链路层，适用于局域网。ARP协议工作过程：
+1\. 本地主机在局域网中广播ARP请求，ARP请求数据帧中包含目的主机的IP地址。意思是“如果你是这个IP地址的拥有者，请回答你的硬件地址”。
+2\. 目的主机的ARP层解析这份广播报文，识别出是询问其硬件地址。于是发送ARP应答包，里面包含IP地址及其对应的硬件地址。
+3\. 本地主机收到ARP应答后，知道了目的地址的硬件地址，之后的数据报就可以传送了。
 
 [computer_network_architecture]: computer_network_architecture.png
 
