增加非对称加密、AC向量机、文件描述符

--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -4,18 +4,18 @@
 
 - [1. 单例模式](#1-单例模式)
 - [2. 快速排序`partition`过程](#2-快速排序partition过程)
-  - [2.1. 方法一](#21-方法一)
-  - [2.2. 方法二](#22-方法二)
-  - [2.3. 方法三](#23-方法三)
+    - [2.1. 方法一](#21-方法一)
+    - [2.2. 方法二](#22-方法二)
+    - [2.3. 方法三](#23-方法三)
 - [3. 快速排序](#3-快速排序)
-  - [3.1. 递归](#31-递归)
-  - [3.2. 非递归](#32-非递归)
+    - [3.1. 递归](#31-递归)
+    - [3.2. 非递归](#32-非递归)
 - [4. 插入排序](#4-插入排序)
 - [5. 冒泡排序](#5-冒泡排序)
 - [6. 选择排序](#6-选择排序)
 - [7. 归并排序](#7-归并排序)
-  - [7.1. 递归](#71-递归)
-  - [7.2. 非递归](#72-非递归)
+    - [7.1. 递归](#71-递归)
+    - [7.2. 非递归](#72-非递归)
 - [8. 堆排序](#8-堆排序)
 - [9. 反转链表（头插法）](#9-反转链表头插法)
 - [10. 单链表去重](#10-单链表去重)
@@ -24,22 +24,22 @@
 - [13. 链表等概率随机抽取元素](#13-链表等概率随机抽取元素)
 - [14. 链表按奇数序号和偶数序号重排](#14-链表按奇数序号和偶数序号重排)
 - [15. 二叉树前序遍历](#15-二叉树前序遍历)
-  - [15.1. 递归](#151-递归)
-  - [15.2. 非递归](#152-非递归)
+    - [15.1. 递归](#151-递归)
+    - [15.2. 非递归](#152-非递归)
 - [16. 二叉树中序遍历](#16-二叉树中序遍历)
-  - [16.1. 递归](#161-递归)
-  - [16.2. 非递归](#162-非递归)
+    - [16.1. 递归](#161-递归)
+    - [16.2. 非递归](#162-非递归)
 - [17. 二叉树后序遍历](#17-二叉树后序遍历)
-  - [17.1. 递归](#171-递归)
-  - [17.2. 非递归](#172-非递归)
+    - [17.1. 递归](#171-递归)
+    - [17.2. 非递归](#172-非递归)
 - [18. 二叉树层次遍历](#18-二叉树层次遍历)
 - [19. Dijkstra算法](#19-dijkstra算法)
-  - [19.1. 朴素](#191-朴素)
-  - [19.2. 堆优化](#192-堆优化)
+    - [19.1. 朴素](#191-朴素)
+    - [19.2. 堆优化](#192-堆优化)
 - [20. Floyd-Warshall算法](#20-floyd-warshall算法)
 - [21. 拓扑排序](#21-拓扑排序)
-  - [21.1. DFS](#211-dfs)
-  - [21.2. BFS](#212-bfs)
+    - [21.1. DFS](#211-dfs)
+    - [21.2. BFS](#212-bfs)
 - [22. 二分搜索](#22-二分搜索)
 - [23. 并查集](#23-并查集)
 - [24. Trie树](#24-trie树)
@@ -53,7 +53,7 @@
 - [32. 自底向上](#32-自底向上)
 - [33. 计算数字二进制表示的1的个数](#33-计算数字二进制表示的1的个数)
 - [34. 数组中除一个数仅出现一次外，其他数均出现两次，找出这个数](#34-数组中除一个数仅出现一次外其他数均出现两次找出这个数)
-- [35. 长为n的数组中所有元素在\[1, n\]之间，元素最多出现两次，找出\[1, n\]中没出现的元素](#35-长为n的数组中所有元素在1-n之间元素最多出现两次找出1-n中没出现的元素)
+- [35. 长为n的数组中所有元素在[1, n]之间，元素最多出现两次，找出[1, n]中没出现的元素](#35-长为n的数组中所有元素在1-n之间元素最多出现两次找出1-n中没出现的元素)
 - [36. 不用`+`和`-`计算两个数的和](#36-不用和-计算两个数的和)
 - [37. 反转二叉树](#37-反转二叉树)
 - [38. 把数组中所有0移动到尾部，数组元素保持相对顺序不变](#38-把数组中所有0移动到尾部数组元素保持相对顺序不变)
@@ -63,13 +63,13 @@
 - [42. 指定长度二进制数，指定1的个数的所有可能情况](#42-指定长度二进制数指定1的个数的所有可能情况)
 - [43. 有序数组转二叉搜索树](#43-有序数组转二叉搜索树)
 - [44. 最大子数列问题](#44-最大子数列问题)
-  - [44.1. 最小值为0](#441-最小值为0)
-  - [44.2. 最小值为负数](#442-最小值为负数)
+    - [44.1. 最小值为0](#441-最小值为0)
+    - [44.2. 最小值为负数](#442-最小值为负数)
 - [45. 判断一个数是否为2的幂次](#45-判断一个数是否为2的幂次)
 - [46. 判断一个数是否为4的幂次](#46-判断一个数是否为4的幂次)
 - [47. 最近公共祖先问题](#47-最近公共祖先问题)
-  - [47.1. 二叉树的最近公共祖先](#471-二叉树的最近公共祖先)
-  - [47.2. 二叉搜索树的最近公共祖先](#472-二叉搜索树的最近公共祖先)
+    - [47.1. 二叉树的最近公共祖先](#471-二叉树的最近公共祖先)
+    - [47.2. 二叉搜索树的最近公共祖先](#472-二叉搜索树的最近公共祖先)
 - [48. 挑选数组中不连续的元素，使其和最大](#48-挑选数组中不连续的元素使其和最大)
 - [49. 镜像二叉树](#49-镜像二叉树)
 - [50. 判断二叉树是否平衡](#50-判断二叉树是否平衡)
@@ -85,7 +85,7 @@
 - [60. 打乱数组元素](#60-打乱数组元素)
 - [61. 生成不重复随机序列](#61-生成不重复随机序列)
 - [62. 使用随机生成0到5的函数，实现随机生成0到7的函数](#62-使用随机生成0到5的函数实现随机生成0到7的函数)
-- [63. 计算数组A、B、C、D中有多少种(i, j, k, l)使得A\[i\] + B\[j\] + C\[k\] + D\[l\] = 0](#63-计算数组abcd中有多少种i-j-k-l使得ai--bj--ck--dl--0)
+- [63. 计算数组A、B、C、D中有多少种(i, j, k, l)使得A[i] + B[j] + C[k] + D[l] = 0](#63-计算数组abcd中有多少种i-j-k-l使得ai--bj--ck--dl--0)
 - [64. 计算给出的多个时间中，最小的时间差](#64-计算给出的多个时间中最小的时间差)
 - [65. 计算\[0, 10^n)中各位数字不同的数的个数](#65-计算\0-10^n中各位数字不同的数的个数)
 - [66. 数组中仅有两个数仅出现一次，其余的数均出现两次，找出这两个数](#66-数组中仅有两个数仅出现一次其余的数均出现两次找出这两个数)
@@ -95,17 +95,17 @@
 - [70. 在有序矩阵中寻找第k大的数](#70-在有序矩阵中寻找第k大的数)
 - [71. 求n对括号的所有排列情况](#71-求n对括号的所有排列情况)
 - [72. 给定字符串数组，求最大不相交的两个字符串的长度积](#72-给定字符串数组求最大不相交的两个字符串的长度积)
-- [73. 在由\[1, n\]组成的长为n + 1的数组中，寻找重复的那个数](#73-在由1-n组成的长为n--1的数组中寻找重复的那个数)
+- [73. 在由[1, n]组成的长为n + 1的数组中，寻找重复的那个数](#73-在由1-n组成的长为n--1的数组中寻找重复的那个数)
 - [74. 求给定数组的所有排列情况](#74-求给定数组的所有排列情况)
 - [75. 最长回文子序列](#75-最长回文子序列)
-- [76. 将\[1, n\]的数按字典排序](#76-将1-n的数按字典排序)
+- [76. 将[1, n]的数按字典排序](#76-将1-n的数按字典排序)
 - [77. 二叉搜索树迭代器](#77-二叉搜索树迭代器)
-- [78. 由\[1, n\]组成的二叉搜索树的个数](#78-由1-n组成的二叉搜索树的个数)
+- [78. 由[1, n]组成的二叉搜索树的个数](#78-由1-n组成的二叉搜索树的个数)
 - [79. 格雷码](#79-格雷码)
 - [80. 从m x n棋盘左上角走到右下角的路径总数](#80-从m-x-n棋盘左上角走到右下角的路径总数)
 - [81. 求循环移位的有序数组中的到最小值](#81-求循环移位的有序数组中的到最小值)
 - [82. 求集合的所有子集](#82-求集合的所有子集)
-- [83. 判断数组arr中是否存在arr\[i\] &lt; arr\[j\] &lt; arr\[k\]](#83-判断数组arr中是否存在arri-lt-arrj-lt-arrk)
+- [83. 判断数组arr中是否存在arr[i] &lt; arr[j] &lt; arr[k]](#83-判断数组arr中是否存在arri-lt-arrj-lt-arrk)
 - [84. 查找数组中第k大的数](#84-查找数组中第k大的数)
 - [85. 链表删除倒数第n个结点](#85-链表删除倒数第n个结点)
 - [86. 判断数组是否可以拼接为正方形](#86-判断数组是否可以拼接为正方形)
@@ -122,6 +122,7 @@
 - [97. 删除二叉搜索树中的结点](#97-删除二叉搜索树中的结点)
 - [98. 检查字符串是否是合法的二叉树前序遍历结果](#98-检查字符串是否是合法的二叉树前序遍历结果)
 - [99. 中缀表达式转后缀表达式](#99-中缀表达式转后缀表达式)
+- [100. 快速替换10亿条标题中的5万个敏感词](#100-快速替换10亿条标题中的5万个敏感词)
 
 <!-- /TOC -->
 
@@ -2861,6 +2862,14 @@ String infixToPostfix(String infix) {
     return builder.toString();
 }
 ```
+
+## 100. 快速替换10亿条标题中的5万个敏感词
+
+Aho-Corasick算法（AC自动机）：
+
+- 构造一棵Trie树；
+- 构造失败指针；
+- 模式匹配。
 
 [leetcode_461]: https://leetcode.com/problems/hamming-distance/#/description
 
