--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -5,12 +5,13 @@
 - [1. 进程间通信方式](#1-进程间通信方式)
 - [2. 操作系统的特征](#2-操作系统的特征)
 - [3. 进程的组成](#3-进程的组成)
-  - [3.1. 进程控制块（Process Control Block，PCB）](#31-进程控制块process-control-blockpcb)
-  - [3.2. 程序段](#32-程序段)
-  - [3.3. 数据段](#33-数据段)
+    - [3.1. 进程控制块（Process Control Block，PCB）](#31-进程控制块process-control-blockpcb)
+    - [3.2. 程序段](#32-程序段)
+    - [3.3. 数据段](#33-数据段)
 - [4. 线程与进程的比较](#4-线程与进程的比较)
 - [5. 死锁产生的必要条件](#5-死锁产生的必要条件)
 - [6. Linux文件系统](#6-linux文件系统)
+- [7. Linux中的文件描述符](#7-linux中的文件描述符)
 
 <!-- /TOC -->
 
@@ -99,6 +100,12 @@ inode之后是数据块（Data Block），其特点是：
 - block的大小（1KB、2KB、4KB）与数量在格式化完就不能再改变（除非重新格式化）
 - 每个block内最多只能放置一个文件的数据
 - 如果文件大于block的大小，则一个文件会占用多个block数量
+
+## 7. Linux中的文件描述符
+
+文件描述符（file descriptor）是内核为了高效管理已被打开的文件所创建的索引，其是一个非负整数（通常是小整数），用于指代被打开的文件，所有执行I/O操作的系统调用都通过文件描述符。程序刚刚启动的时候，0是标准输入，1是标准输出，2是标准错误。
+
+每一个文件描述符会与一个打开文件相对应，同时，不同的文件描述符也会指向同一个文件。相同的文件可以被不同的进程打开也可以在同一个进程中被多次打开。系统为每一个进程维护了一个文件描述符表，该表的值都是从0开始的，所以在不同的进程中你会看到相同的文件描述符，这种情况下相同文件描述符有可能指向同一个文件，也有可能指向不同的文件。
 
 [linux_partition]: linux_partition.png
 
