--- a/其他/其他.md
+++ b/其他/其他.md
@@ -3,11 +3,12 @@
 <!-- TOC -->
 
 - [1. XML和JSON的区别](#1-xml和json的区别)
-  - [1.1. XML](#11-xml)
-  - [1.2. JSON](#12-json)
+    - [1.1. XML](#11-xml)
+    - [1.2. JSON](#12-json)
 - [2. 开源协议](#2-开源协议)
 - [3. 方法中什么时候需要进行参数校验，什么时候不需要](#3-方法中什么时候需要进行参数校验什么时候不需要)
 - [4. 版本号命名方式](#4-版本号命名方式)
+- [如何理解非对称加密](#如何理解非对称加密)
 
 <!-- /TOC -->
 
@@ -55,6 +56,13 @@
 1\. 主版本号：当做了不兼容的API修改。
 2\. 次版本号：当做了向下兼容的功能性新增。
 3\. 修订号：当做了向下兼容的问题修正。
+
+## 如何理解非对称加密
+首先，每个用户都有两把钥匙，一把公钥一把私钥。公钥是对外发布的，所有人都看的到所有人的公钥，私钥是自己保存，每个人都只知道自己的私钥而不知道别人的。
+
+用该用户的公钥加密后只能该用户的私钥才能解密。这种情况下，公钥是用来加密信息的，确保只有特定的人（用谁的公钥就是谁）才能解密该信息。
+
+还有第二种情况，公钥是用来解密信息的，确保让别人知道这条信息是真的由我发布的，是完整正确的。接收者由此可知这条信息确实来自于拥有私钥的某人，这被称作数字签名，公钥的形式就是数字证书。
 
 [choose_a_license]: https://choosealicense.com/licenses/
 
