增加虚拟地址到物理地址的翻译、常用设计模式

--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -5,13 +5,14 @@
 - [1. 进程间通信方式](#1-进程间通信方式)
 - [2. 操作系统的特征](#2-操作系统的特征)
 - [3. 进程的组成](#3-进程的组成)
-    - [3.1. 进程控制块（Process Control Block，PCB）](#31-进程控制块process-control-blockpcb)
-    - [3.2. 程序段](#32-程序段)
-    - [3.3. 数据段](#33-数据段)
+  - [3.1. 进程控制块（Process Control Block，PCB）](#31-进程控制块process-control-blockpcb)
+  - [3.2. 程序段](#32-程序段)
+  - [3.3. 数据段](#33-数据段)
 - [4. 线程与进程的比较](#4-线程与进程的比较)
 - [5. 死锁产生的必要条件](#5-死锁产生的必要条件)
 - [6. Linux文件系统](#6-linux文件系统)
 - [7. Linux中的文件描述符](#7-linux中的文件描述符)
+- [8. 虚拟地址到物理地址的翻译过程](#8-虚拟地址到物理地址的翻译过程)
 
 <!-- /TOC -->
 
@@ -107,6 +108,12 @@ inode之后是数据块（Data Block），其特点是：
 
 每一个文件描述符会与一个打开文件相对应，同时，不同的文件描述符也会指向同一个文件。相同的文件可以被不同的进程打开也可以在同一个进程中被多次打开。系统为每一个进程维护了一个文件描述符表，该表的值都是从0开始的，所以在不同的进程中你会看到相同的文件描述符，这种情况下相同文件描述符有可能指向同一个文件，也有可能指向不同的文件。
 
+## 8. 虚拟地址到物理地址的翻译过程
+
+![Virtual Address to Physical Address][virtual_address_to_physical_address]
+
 [linux_partition]: linux_partition.png
 
 [inode]: inode.png
+
+[virtual_address_to_physical_address]: virtual_address_to_physical_address.png
