--- a/操作系统/操作系统.md
+++ b/操作系统/操作系统.md
@@ -112,8 +112,8 @@ inode之后是数据块（Data Block），其特点是：
 
 ![Virtual Address to Physical Address][virtual_address_to_physical_address]
 
-[linux_partition]: linux_partition.png
+[linux_partition]: images/linux_partition.png
 
-[inode]: inode.png
+[inode]: images/inode.png
 
-[virtual_address_to_physical_address]: virtual_address_to_physical_address.png
+[virtual_address_to_physical_address]: images/virtual_address_to_physical_address.png
