--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -6,17 +6,17 @@
 - [2. 数据进入协议栈时的封装](#2-数据进入协议栈时的封装)
 - [3. TCP传输过程](#3-tcp传输过程)
 - [4. HTTP报文](#4-http报文)
-    - [4.1. HTTP请求报文](#41-http请求报文)
-        - [4.1.1. 方法（Method）](#411-方法method)
-        - [4.1.2. 请求URL（Request-URL）](#412-请求urlrequest-url)
-        - [4.1.3. 版本（Version）](#413-版本version)
-        - [4.1.4. 首部（Header Field）](#414-首部header-field)
-        - [4.1.5. 实体主体（Entity Body）](#415-实体主体entity-body)
-    - [4.2. HTTP响应报文](#42-http响应报文)
-        - [4.2.1. 版本（Version）](#421-版本version)
-        - [4.2.2. 状态码（Status Code）和短语（Phrase）](#422-状态码status-code和短语phrase)
-        - [4.2.3. 首部（Header Field）](#423-首部header-field)
-        - [4.2.4. 实体主体（Entity Body）](#424-实体主体entity-body)
+  - [4.1. HTTP请求报文](#41-http请求报文)
+    - [4.1.1. 方法（Method）](#411-方法method)
+    - [4.1.2. 请求URL（Request-URL）](#412-请求urlrequest-url)
+    - [4.1.3. 版本（Version）](#413-版本version)
+    - [4.1.4. 首部（Header Field）](#414-首部header-field)
+    - [4.1.5. 实体主体（Entity Body）](#415-实体主体entity-body)
+  - [4.2. HTTP响应报文](#42-http响应报文)
+    - [4.2.1. 版本（Version）](#421-版本version)
+    - [4.2.2. 状态码（Status Code）和短语（Phrase）](#422-状态码status-code和短语phrase)
+    - [4.2.3. 首部（Header Field）](#423-首部header-field)
+    - [4.2.4. 实体主体（Entity Body）](#424-实体主体entity-body)
 - [5. MTU最小64B最大1518B的由来](#5-mtu最小64b最大1518b的由来)
 - [6. IPv4分组格式](#6-ipv4分组格式)
 - [7. HTTP响应码301和302的区别？](#7-http响应码301和302的区别)
@@ -372,24 +372,24 @@ HTTPS和HTTP主要区别：
 - HTTP是超文本传输协议，信息是明文传输，HTTPS则是具有安全性的SSL加密传输协议。
 - HTTP和HTTPS使用的是完全不同的连接方式，用的端口也不一样，前者是80，后者是443。
 
-[computer_network_architecture]: computer_network_architecture.png
-
-[data_packet_in_protocol_stack]: data_packet_in_protocol_stack.png
-
-[http_request_message]: http_request_message.png
-
-[http_response_message]: http_response_message.png
-
-[tcp_communication]: tcp_communication.png
-
 [ethernet frame]: https://zhuanlan.zhihu.com/p/21318925
 
 [tcp part 1 coolshell]: http://coolshell.cn/articles/11564.html
 
 [tcp part 2 coolshell]: http://coolshell.cn/articles/11609.html
 
-[ipv4_packet_structure]: ipv4_packet_structure.png
+[computer_network_architecture]: images/computer_network_architecture.png
 
-[https_communication]: https_communication.png
+[data_packet_in_protocol_stack]: images/data_packet_in_protocol_stack.png
 
-[https_ssl]: https_ssl.png
+[http_request_message]: images/http_request_message.png
+
+[http_response_message]: images/http_response_message.png
+
+[tcp_communication]: images/tcp_communication.png
+
+[ipv4_packet_structure]: images/ipv4_packet_structure.png
+
+[https_communication]: images/https_communication.png
+
+[https_ssl]: images/https_ssl.png
