--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -6,17 +6,17 @@
 - [2. 数据进入协议栈时的封装](#2-数据进入协议栈时的封装)
 - [3. TCP传输过程](#3-tcp传输过程)
 - [4. HTTP报文](#4-http报文)
-  - [4.1. HTTP请求报文](#41-http请求报文)
-    - [4.1.1. 方法（Method）](#411-方法method)
-    - [4.1.2. 请求URL（Request-URL）](#412-请求urlrequest-url)
-    - [4.1.3. 版本（Version）](#413-版本version)
-    - [4.1.4. 首部（Header Field）](#414-首部header-field)
-    - [4.1.5. 实体主体（Entity Body）](#415-实体主体entity-body)
-  - [4.2. HTTP响应报文](#42-http响应报文)
-    - [4.2.1. 版本（Version）](#421-版本version)
-    - [4.2.2. 状态码（Status Code）和短语（Phrase）](#422-状态码status-code和短语phrase)
-    - [4.2.3. 首部（Header Field）](#423-首部header-field)
-    - [4.2.4. 实体主体（Entity Body）](#424-实体主体entity-body)
+    - [4.1. HTTP请求报文](#41-http请求报文)
+        - [4.1.1. 方法（Method）](#411-方法method)
+        - [4.1.2. 请求URL（Request-URL）](#412-请求urlrequest-url)
+        - [4.1.3. 版本（Version）](#413-版本version)
+        - [4.1.4. 首部（Header Field）](#414-首部header-field)
+        - [4.1.5. 实体主体（Entity Body）](#415-实体主体entity-body)
+    - [4.2. HTTP响应报文](#42-http响应报文)
+        - [4.2.1. 版本（Version）](#421-版本version)
+        - [4.2.2. 状态码（Status Code）和短语（Phrase）](#422-状态码status-code和短语phrase)
+        - [4.2.3. 首部（Header Field）](#423-首部header-field)
+        - [4.2.4. 实体主体（Entity Body）](#424-实体主体entity-body)
 - [5. MTU最小64B最大1518B的由来](#5-mtu最小64b最大1518b的由来)
 - [6. IPv4分组格式](#6-ipv4分组格式)
 - [7. HTTP响应码301和302的区别？](#7-http响应码301和302的区别)
@@ -26,6 +26,8 @@
 - [11. 分布式session如何同步](#11-分布式session如何同步)
 - [12. ARP协议](#12-arp协议)
 - [13. HTTPS](#13-https)
+- [14. HTTP 1.0和HTTP 1.1的区别](#14-http-10和http-11的区别)
+- [15. HTTP 1.1和HTTP 2.0的区别](#15-http-11和http-20的区别)
 
 <!-- /TOC -->
 
@@ -372,11 +374,32 @@ HTTPS和HTTP主要区别：
 - HTTP是超文本传输协议，信息是明文传输，HTTPS则是具有安全性的SSL加密传输协议。
 - HTTP和HTTPS使用的是完全不同的连接方式，用的端口也不一样，前者是80，后者是443。
 
+## 14. HTTP 1.0和HTTP 1.1的区别
+
+- 缓存处理：在HTTP 1.0中主要使用header里的`If-Modified-Since`,`Expires`来做为缓存判断的标准，HTTP 1.1则引入了更多的缓存控制策略例如`Entity tag`，`If-Unmodified-Since`, `If-Match`, `If-None-Match`等更多可供选择的缓存头来控制缓存策略。
+- 带宽优化及网络连接的使用：HTTP 1.0中，存在一些浪费带宽的现象，例如客户端只是需要某个对象的一部分，而服务器却将整个对象送过来了，并且不支持断点续传功能，HTTP 1.1则在请求头引入了range头域，它允许只请求资源的某个部分，即返回码是206（Partial Content），这样就方便了开发者自由的选择以便于充分利用带宽和连接。
+- 错误通知的管理：在HTTP 1.1中新增了24个错误状态响应码，如409（Conflict）表示请求的资源与资源的当前状态发生冲突；410（Gone）表示服务器上的某个资源被永久性的删除。
+- Host头处理：在HTTP 1.0中认为每台服务器都绑定一个唯一的IP地址，因此，请求消息中的URL并没有传递主机名（hostname）。但随着虚拟主机技术的发展，在一台物理服务器上可以存在多个虚拟主机（Multi-homed Web Servers），并且它们共享一个IP地址。HTTP 1.1的请求消息和响应消息都应支持Host头域，且请求消息中如果没有Host头域会报告一个错误（400 Bad Request）。
+- 长连接：HTTP 1.1支持长连接（PersistentConnection）和请求的流水线（Pipelining）处理，在一个TCP连接上可以传送多个HTTP请求和响应，减少了建立和关闭连接的消耗和延迟，在HTTP 1.1中默认开启Connection： keep-alive，一定程度上弥补了HTTP 1.0每次请求都要创建连接的缺点。
+
+参考：[HTTP,HTTP2.0,SPDY,HTTPS你应该知道的一些事 | AlloyTeam][http_http2_spdy_https_difference]
+
+## 15. HTTP 1.1和HTTP 2.0的区别
+
+- 新的二进制格式（Binary Format）：HTTP 1.x的解析是基于文本。基于文本协议的格式解析存在天然缺陷，文本的表现形式有多样性，要做到健壮性考虑的场景必然很多，二进制则不同，只认0和1的组合。基于这种考虑HTTP 2.0的协议解析决定采用二进制格式，实现方便且健壮。
+- 多路复用（MultiPlexing）：即连接共享，即每一个request都是是用作连接共享机制的。一个request对应一个id，这样一个连接上可以有多个request，每个连接的request可以随机的混杂在一起，接收方可以根据request的id将request再归属到各自不同的服务端请求里面。
+- header压缩：HTTP 1.x的header带有大量信息，而且每次都要重复发送，HTTP 2.0使用encoder来减少需要传输的header大小，通讯双方各自cache一份header fields表，既避免了重复header的传输，又减小了需要传输的大小。
+- 服务端推送（server push）：server push功能。
+
+参考：[HTTP,HTTP2.0,SPDY,HTTPS你应该知道的一些事 | AlloyTeam][http_http2_spdy_https_difference]
+
 [ethernet frame]: https://zhuanlan.zhihu.com/p/21318925
 
 [tcp part 1 coolshell]: http://coolshell.cn/articles/11564.html
 
 [tcp part 2 coolshell]: http://coolshell.cn/articles/11609.html
+
+[http_http2_spdy_https_difference]: http://www.alloyteam.com/2016/07/httphttp2-0spdyhttps-reading-this-is-enough/
 
 [computer_network_architecture]: images/computer_network_architecture.png
 
