增加最大公约数和最小公倍数

--- a/常用代码/常用代码.md
+++ b/常用代码/常用代码.md
@@ -124,6 +124,8 @@
 - [99. 中缀表达式转后缀表达式](#99-中缀表达式转后缀表达式)
 - [100. 快速替换10亿条标题中的5万个敏感词](#100-快速替换10亿条标题中的5万个敏感词)
 - [101. 轮流取数的必胜策略](#101-轮流取数的必胜策略)
+- [102. 最大公约数（辗转相除法）](#102-最大公约数辗转相除法)
+- [103. 最小公倍数](#103-最小公倍数)
 
 <!-- /TOC -->
 
@@ -2872,11 +2874,26 @@ Aho-Corasick算法（AC自动机）：
 - 构造失败指针；
 - 模式匹配。
 
+参考：[AC自动机算法详解 - 极限定律 - C++博客][aho_corasick_algorithm]
+
 ## 101. 轮流取数的必胜策略
 
 问题描述：有2N个自然数，甲乙两人轮流取。一人一次取一个，而且只能取头尾两个数中的一个，取过的数划去，直到2N个数取完，取得的数的总和大的人获胜。那么，先取的人是否有必胜策略？
 
 解决方法：先取的人只要取了奇数位上的数，就把偶数位的数留给后取的人，而且只要坚持取奇数位上的数，就一直会把偶数位上的数留给后取的人。这样就会取走所有奇数位上的数。（这种方法同样可使先取的人把所有偶数位上的数取走）所以，先取的人只要一开始算出是所有偶数位上的数总和大，还是所有奇数位上的数总和大，就一定会胜。
+
+## 102. 最大公约数（辗转相除法）
+
+```python
+def gcd(a, b):
+    while b:
+        a, b = b, a % b
+    return a
+```
+
+## 103. 最小公倍数
+
+`(a * b)/gcd(a, b)`
 
 [leetcode_461]: https://leetcode.com/problems/hamming-distance/#/description
 
@@ -3003,3 +3020,5 @@ Aho-Corasick算法（AC自动机）：
 [leetcode_450]: https://leetcode.com/problems/delete-node-in-a-bst/#/description
 
 [leetcode_331]: https://leetcode.com/problems/verify-preorder-serialization-of-a-binary-tree/#/description
+
+[aho_corasick_algorithm]: http://www.cppblog.com/mythit/archive/2009/04/21/80633.html
