增加MyISAM与InnoDB的区别、悲观锁与乐观锁

--- a/数据库/数据库.md
+++ b/数据库/数据库.md
@@ -16,6 +16,10 @@
   - [4.2. 可重复读](#42-可重复读)
   - [4.3. 提交读](#43-提交读)
   - [4.4. 未提交读](#44-未提交读)
+- [5. MySQL的MyISAM引擎与InnoDB引擎的区别](#5-mysql的myisam引擎与innodb引擎的区别)
+- [6. 悲观锁与乐观锁：](#6-悲观锁与乐观锁)
+  - [6.1. 悲观锁](#61-悲观锁)
+  - [6.2. 乐观锁](#62-乐观锁)
 
 <!-- /TOC -->
 
@@ -110,6 +114,36 @@ ANSI/ISO SQL定义的标准隔离级别如下：
 通过比低一级的隔离级别要求更多的限制，高一级的级别提供更强的隔离性。标准允许事务运行在更强的事务隔离级别上。(如在可重复读隔离级别上执行提交读的事务是没有问题的)
 
 [事务隔离 - 维基百科，自由的百科全书][transaction_isolation]
+
+## 5. MySQL的MyISAM引擎与InnoDB引擎的区别
+
+- 设计目标：InnoDB设计目标是处理大容量的数据，而MyISAM追求的是性能，两者产生的差异也是基于这点。InnoDB是MySQL的默认存储引擎。
+- 事务处理：InnoDB支持事务和外键，MyISAM不支持。MyISAM强调的是性能，InnoDB支持的功能更加完整。InnoDB支持事务带来了一个好处，发生故障时可以通过事务日志来恢复数据库，MyISAM特别要命的一点是崩溃后不能安全恢复，所以对于表比较大的情况不要用。
+- 效率和锁：两种存储引擎的效率差异来自于锁的方式差异，MyISAM是表锁，对数据库进行写操作时会锁住整个表，效率很低；确定要修改数据的范围时，InnoDB是行锁，只锁一行的数据，写操作很快。
+- 索引：MyISAM支持全文索引，InnoDB不支持。
+- `COUNT(*)`：MyISAM保存了表的行数，InnoDB没有。也就是说，执行`SELECT COUNT(*) FROM student`的操作时，MyISAM可以直接给出结果，而InnoDB要先扫描全表。不过对于加了where条件的查询操作，效果是一样的。
+- AUTO_INCREMENT：InnoDB下只能对自增字段单独建索引，MyISAM下可以和其它列一起建联合索引。
+
+## 6. 悲观锁与乐观锁：
+
+乐观并发控制(乐观锁)和悲观并发控制（悲观锁）是并发控制主要采用的技术手段。
+
+### 6.1. 悲观锁
+
+悲观并发控制（又名“悲观锁”，Pessimistic Concurrency Control，缩写“PCC”）是一种并发控制的方法。它可以阻止一个事务以影响其他用户的方式来修改数据。如果一个事务执行的操作都某行数据应用了锁，那只有当这个事务把锁释放，其他事务才能够执行与该锁冲突的操作。悲观并发控制主要用于数据争用激烈的环境，以及发生并发冲突时使用锁保护数据的成本要低于回滚事务的成本的环境中。
+
+悲观锁的流程：
+
+- 在对任意记录进行修改前，先尝试为该记录加上排他锁（exclusive locking）。
+- 如果加锁失败，说明该记录正在被修改，那么当前查询可能要等待或者抛出异常。
+- 如果成功加锁，那么就可以对记录做修改，事务完成后解锁。
+- 其间如果有其他对该记录做修改或加排他锁的操作，都会等待解锁或直接抛出异常。
+
+### 6.2. 乐观锁
+
+乐观并发控制（又名“乐观锁”，Optimistic Concurrency Control，缩写“OCC”）是一种并发控制的方法。它假设多用户并发的事务在处理时不会彼此互相影响，各事务能够在不产生锁的情况下处理各自影响的那部分数据。在提交数据更新之前，每个事务会先检查在该事务读取数据后，有没有其他事务又修改了该数据。如果其他事务有更新的话，正在提交的事务会进行回滚。
+
+实现数据版本有两种方式，第一种是使用版本号，第二种是使用时间戳。
 
 [nf]: http://www.jianshu.com/p/d27db67868b6
 
