增加traceroute和ping的区别

--- a/计算机网络/计算机网络.md
+++ b/计算机网络/计算机网络.md
@@ -28,6 +28,9 @@
 - [13. HTTPS](#13-https)
 - [14. HTTP 1.0和HTTP 1.1的区别](#14-http-10和http-11的区别)
 - [15. HTTP 1.1和HTTP 2.0的区别](#15-http-11和http-20的区别)
+- [16. traceroute和ping的区别](#16-traceroute和ping的区别)
+    - [16.1. traceroute](#161-traceroute)
+    - [16.2. ping](#162-ping)
 
 <!-- /TOC -->
 
@@ -392,6 +395,23 @@ HTTPS和HTTP主要区别：
 - 服务端推送（server push）：server push功能。
 
 参考：[HTTP,HTTP2.0,SPDY,HTTPS你应该知道的一些事 | AlloyTeam][http_http2_spdy_https_difference]
+
+## 16. traceroute和ping的区别
+
+### 16.1. traceroute
+
+traceroute主要利用了TCP/IP协议族中的两个特性：
+
+- 路由器转发IP数据报时需要把TTL减1，当TTL减为0时路由器会向源端发送ICMP超时报文；
+- 主机（或路由器）处理处理目的地址时本机的UDP报文时，当报文中目的端口字段指定的端口不可用时，将向UDP报文发送端发送ICMP端口不可达报文。
+
+traceroute的工作流程是源端发送一份TTL为1的UDP报文到目的端，处理这个报文的第一个路由器将TTL减1，丢弃该报文，并向源端发回ICMP超时报文，从而学到第一台路由器地址。然后traceroute发送TTL为2的数据报，这样第二台路由器同样丢弃报文并发回ICMP超时报文，从而学到第二台路由器地址。如此循环直到目的主机（或路由器）接收到该报文，这样就学习到了全路径的路由。
+
+目的端接收UDP报文以后可能不会像其他路由器一样发回ICMP超时报文，这时在traceroute发送的UDP报文中目的端口号填上一个不可能被使用的值（30000以上），这样目的端收到时会发回ICMP端口不可达报文，这样traceroute就知道已经到达目的端了。
+
+### 16.2. ping
+
+ping发送一份ICMP Echo Request（Echo Request）报文给另一台主机，并等待返回ICMP Echo Reply（Echo Reply）。
 
 [ethernet frame]: https://zhuanlan.zhihu.com/p/21318925
 
