增加二维码项目相关介绍

--- a/项目相关/项目相关.md
+++ b/项目相关/项目相关.md
@@ -12,6 +12,11 @@
   - [1.5. 开发APP遇到的问题](#15-开发app遇到的问题)
     - [1.5.1. 不能实时解码](#151-不能实时解码)
     - [1.5.2. 代码扩展性差](#152-代码扩展性差)
+  - [1.6. 用到了哪些机器学习方法](#16-用到了哪些机器学习方法)
+  - [1.7. `MediaCodec`应用在哪里？](#17-mediacodec应用在哪里)
+  - [1.8. 代码结构](#18-代码结构)
+    - [1.8.1. 发送方](#181-发送方)
+    - [1.8.2. 接收方](#182-接收方)
 
 <!-- /TOC -->
 
@@ -74,3 +79,36 @@
 - 使用工厂方法管理不同二维码的实例化，复用同一套处理框架。
 - 使用策略模式根据不同需求调整使用不同的二维码定位算法。
 - 将各种不同二维码的构造生成方法抽象为统一的平台，将二维码分割成border、padding、数据区等块，对于每一块独立指定二维码形状和数据等即可生成二维码。这样避免了为每种二维码写一个大同小异的生成方法，也避免了需要计算各种偏移量等。
+
+### 1.6. 用到了哪些机器学习方法
+
+- 实际是一个分类问题，features是小方块采样点颜色和对应参考颜色，class是小方块的真实数据。
+- 最基本的是使用决策树（Decision Tree），分类效果较好。
+- 为解决决策树学习时间长的问题，使用随机森林（Random Forest），学习速度有明显提高。
+- 为解决每次传输需要当场学习出一个模型的问题，使用混合专家模型（Mixture of Experts），对不同场景进行几次传输得到多个模型，使用混合专家模型时只需要在最开始放上少量的学习帧，即可得到各模型的权重，形成一个新的模型。
+
+### 1.7. `MediaCodec`应用在哪里？
+
+- `MediaCodec`用来快速将视频文件解码为图片帧。
+- 项目支持的输入包括摄像头预览、图片和视频。
+- 视频的解码最初使用`MediaMetadataRetriever`，这样有两个主要缺点：软件解码，耗时长；只能使用`getFrameAtTime()`获取帧，不精确。
+- `MediaCodec`是Android提供的硬件解码API，可以快速将视频文件解码为图片帧。
+- 但`MediaCodec`存在一个问题：其仅支持处理器芯片支持的帧格式（YUV420中的众多格式），且没有通用支持的格式，即没有设备通用性。
+- 利用Android API 21的新特性：`COLOR_FormatYUV420Flexible`的支持，和新的`Image`类。
+- 在解码时指定解码格式为`COLOR_FormatYUV420Flexible`（这个所有设备都支持），解码生成的帧指定为Image类，其可以单独获取YUV各个分量的数据。拼接这些数据即可得到指定YUV420格式的图片帧。实现了设备通用性。
+- 对1080P的视频，每个图片帧可以在30ms内得到。
+
+### 1.8. 代码结构
+
+#### 1.8.1. 发送方
+
+- 二维码由Districts、District、Zone组成，其将二维码划分为不同区域（Zone）。每个区域指定其Block的类型，以及二进制数据。由底层处理数据向二维码图片的转换，包括位置、偏移、大小等。
+- 不同的二维码可能有类似的边框样式或数据内容，通过继承关系组织不同的二维码，如BlackWhiteCode是最基础的二维码，其上可以衍生出ColorCode、ShiftCode等。
+
+#### 1.8.2. 接收方
+
+- 使用两个线程一个队列，一个线程用来从摄像头／视频文件获取图片帧，并放入队列；另一个线程从队列中取出图片帧，处理图片帧，直到再无图片帧或数据传输完成。
+- 将图片帧数据封装为RawImage，提供像素值获取、二维码定位等功能。
+- RawImage由MediatBarcode封装，MediatBarcode同时提供反透视变换功能，将二维码分割为Districts、District、Zone区域，提供获取区域像素值数据等功能。
+- MediateBarcode供不同的二维码使用，这些二维码同样有继承关系，最基本的BlackWhiteCode提供有通用的Zone处理方法，如获取帧编号等。
+- StreamDecode提供处理队列中二维码的骨架，其管理二维码间的关联关系，如二维码定位矩阵的保存、帧间冗余算法的纪录。
