增加基于Android、Flask和MySQL的用户情绪和隐私收集系统

--- a/项目相关/项目相关.md
+++ b/项目相关/项目相关.md
@@ -17,6 +17,20 @@
   - [1.8. 代码结构](#18-代码结构)
     - [1.8.1. 发送方](#181-发送方)
     - [1.8.2. 接收方](#182-接收方)
+- [2. 基于Android、Flask和MySQL的用户情绪和隐私收集系统](#2-基于androidflask和mysql的用户情绪和隐私收集系统)
+  - [2.1. 简介](#21-简介)
+  - [2.2. 收集哪些隐私信息](#22-收集哪些隐私信息)
+  - [2.3. 如何长驻后台](#23-如何长驻后台)
+  - [2.4. 如何实现用户登录注册](#24-如何实现用户登录注册)
+  - [2.5. 问卷内容是什么？](#25-问卷内容是什么)
+  - [2.6. 调查问卷如何分发和收集](#26-调查问卷如何分发和收集)
+  - [2.7. APP如何定时抓取用户信息](#27-app如何定时抓取用户信息)
+  - [2.8. 如何上传用户数据](#28-如何上传用户数据)
+  - [2.9. APP崩溃如何分析恢复](#29-app崩溃如何分析恢复)
+  - [2.10. 后台提供哪些统计和管理](#210-后台提供哪些统计和管理)
+  - [2.11. 用到哪些第三方库](#211-用到哪些第三方库)
+  - [2.12. 后台是如何搭建的](#212-后台是如何搭建的)
+  - [2.13. 遇到过哪些问题](#213-遇到过哪些问题)
 
 <!-- /TOC -->
 
@@ -112,3 +126,67 @@
 - RawImage由MediatBarcode封装，MediatBarcode同时提供反透视变换功能，将二维码分割为Districts、District、Zone区域，提供获取区域像素值数据等功能。
 - MediateBarcode供不同的二维码使用，这些二维码同样有继承关系，最基本的BlackWhiteCode提供有通用的Zone处理方法，如获取帧编号等。
 - StreamDecode提供处理队列中二维码的骨架，其管理二维码间的关联关系，如二维码定位矩阵的保存、帧间冗余算法的纪录。
+
+## 2. 基于Android、Flask和MySQL的用户情绪和隐私收集系统
+
+### 2.1. 简介
+
+APP主要包括两部分，一部分是填写调查问卷，另一部分是在后台持续收集用户隐私信息。调查问卷由用户向服务器请求得到，填写完成后提交给服务器；收集隐私是APP长驻后台，定时抓取用户数据并保存到本地数据库，定时将数据库发送给服务器。
+
+### 2.2. 收集哪些隐私信息
+
+收集的隐私信息包括录音（持续5秒）、通话记录、短信、联系人信息、地理位置（高德地图API）、手机信息、传感器信息（磁力计、陀螺仪等）、周围wifi、屏幕亮灭、前台运行APP、后台运行APP等。
+
+### 2.3. 如何长驻后台
+
+- 服务启动时即拿到PARTIAL_WAKE_LOCK，且不放弃。PARTIAL_WAKE_LOCK在屏幕熄灭的情况下仍保持CPU运行。
+- 使用第三方云巴推送平台，定时向所有用户推送消息，用来唤醒APP。
+- 用户配合关闭手机厂商的省电设置等。
+
+### 2.4. 如何实现用户登录注册
+
+因为是科研项目，并没有实现完整的登录注册功能。只需要填写学号、手机号，服务器后台查询不冲突即注册成功；只需要填写学号，服务器能够查询到相关信息即可登录。
+
+### 2.5. 问卷内容是什么？
+
+问卷内容我不关系。主要是询问用户是否开心、沮丧等，及其程度。
+
+### 2.6. 调查问卷如何分发和收集
+
+- 用户收到APP推送或主动打开APP，点击“填写调查问卷”即向服务器发送请求，服务器判断距离用户上次提交问卷时间间隔有没有达到6小时，若未达到则返回错误提示；若达到则进入分发问卷流程。
+- 分发问卷时，服务器从数据库中读取题目，并拼装为json格式，同时针对每次分发生成一个唯一的id，用来记录问卷的提交。
+- 用户填写完问卷点击提交时，同步提交问卷的唯一id；服务器首先验证唯一id是否有效，然后读取客户端发送的json格式回答，解析后保存到数据库中。
+
+### 2.7. APP如何定时抓取用户信息
+
+APP启动同步创建一个Service，Service启动时即实例化一个`SingleThreadScheduledExecutor`，并设定定时执行周期为一分钟。
+
+本地数据库中新建一个表，每行纪录需要运行的任务（抓取哪些信息、心跳、上传数据库、清理数据库、切换新数据库）、执行间隔时间、下次运行时间。每当定时周期达到时，就查询数据库，一旦某个任务的下次运行时间小于当前时间，则执行任务，并根据执行间隔时间确定下次运行时间。
+
+### 2.8. 如何上传用户数据
+
+当执行上传用户数据任务时，则从数据库中读取还未上传的数据库的名字，并逐个通过HTTP POST请求发送本地压缩后的数据库，并在本地数据库中标记此数据库已上传。
+
+### 2.9. APP崩溃如何分析恢复
+
+使用第三方库ACRA进行崩溃信息的收集和上报。
+
+当APP崩溃后，下次运行时对于不完整或异常的任务在撤销后重新执行并写数据库，保证数据库数据的一致性。
+
+### 2.10. 后台提供哪些统计和管理
+
+- 后台展示每个用户的心跳历史、问卷填写历史、上传用户数据时间等。
+- 可以从后台向特定用户发送推送通知，可以针对不同用户指定不同的APP版本。
+
+### 2.11. 用到哪些第三方库
+
+Android上的HTTP通信部分使用了okhttp。
+
+### 2.12. 后台是如何搭建的
+
+后台是基于Python和flask的，flask提供了一套http的处理框架，只需要注册对应的url即可。对于数据的持久存储等则是利用到了MySQL。
+
+### 2.13. 遇到过哪些问题
+
+- APP经常退出前台即被杀死。最初考虑一般的保活方法，如使用AlarmManager，发现用处不大。后来才发现是国内厂商动了手脚，非白名单的APP一律不允许后台运行。所以后来除在技术上尽可能保证APP不被杀死外，还建议用户在手机的设置中将APP加入到白名单。
+- 经常在抓取用户数据时crash。最初以为是本身代码有问题，一番排查后才发现国内厂商在权限管理上动了手脚。按照官方文档，如果执行某些代码时用户未授权则会返回null值或抛出异常，但国内厂商直接在framework层进行了修改，不知道在哪会去检查权限，一旦未授权则直接抛出异常，导致APP crash。最后不得已对一些敏感信息收集时使用大段的try catch，避免未知的crash。
